LDEV-4054: updating labels
Mainly Spanish and a little bit of Greek and Norwegian

--- a/lams_admin/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:53:54 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:53:46 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -582,6 +582,12 @@ msg.delete.all.lesson.error  =Feil under sletting av kurs leksjoner
 label.delete.all.lesson.count  =Antall gjenv\u00e6rende/ totalt antall leksjoner:
 label.delete.all.lesson.progress  =Sletter....
 sysadmin.lesson.delete.title  =Slett alle leksjonene fra kurset
+label.type.live.edit  =Live Edit
+label.no.data.found  =Ingen data funnet
+msg.delete.organisation.confirm  =Du er i ferd med \u00e5 fjerne et kurs permanent. Er du sikker p\u00e5 at du vil gj\u00f8re dette?
+msg.delete.organisation.delete.lessons.confirm  =Kurset eller en av underkursene inneholder fortsatt leksjoner. De m\u00e5 slettes permanent f\u00f8rst. Du blir omdirigert til en side der du kan gj\u00f8re det.
+config.kumalive.enable  =Aktiver Kumalive
+audit.remarks  =Merknader
 
 
-#======= End labels: Exported 576 labels for no NO =====
+#======= End labels: Exported 582 labels for no NO =====
