--- a/lams_gradebook/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Oct 11 21:27:02 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:57:10 CST 2018 
  
 #=================== labels for Gradebook =================# 
 
@@ -51,7 +51,7 @@ label.reset  =Borrar
 gradebook.monitor.releasemarks.1  =Mostrar calificaciones a estudiantes
 gradebook.monitor.releasemarks.2  =Esconder
 gradebook.monitor.releasemarks.3  =calificaciones por esa lecci\u00f3n
-gradebook.monitor.releasemarks.check  =\u00bfEst\u00e1 seguro que quiere mostrar las calificaciones a los estudiantes?
+gradebook.monitor.releasemarks.check  =\u00bfEst\u00e1 seguro que quiere mostrar los puntajes a los estudiantes?
 gradebook.monitor.releasemarks.check2  =\u00bfEsta seguro que quiere esconder las calificaciones de los estudiantes?
 error.releasemarks.fail  =Ha ocurrido un error. Por favor contacte a su administrador de sistema.
 error.markhigher  =La nota debe ser menor a la calificaci\u00f3n m\u00e1xima
@@ -113,6 +113,11 @@ label.simplified.export  =Reporte simplificado (solo calificaciones)
 label.button.show.weights  =Mostrar ponderaci\u00f3n
 label.button.hide.weights  =Ocultar ponderaci\u00f3n
 label.weights.title  =Ponderaci\u00f3n de calificaciones
+gradebook.export.desc  =Seleccione las lecciones para exportar haciendo clic en los cuadrados al lado de las lecciones y luego haga clic en 'Exportar'.
+label.hide.lessons.to.export  =Ocultar lecciones para exportar
+label.activity.marks.weighted  =(Marcas de actividad ponderadas)
+gradebook.export.max.time.taken.seconds  =Tiempo m\u00e1ximo (en segundos)
+gradebook.export.min.time.taken.seconds  =Tiempo m\u00ednimo (en segundos)
 
 
-#======= End labels: Exported 107 labels for es ES =====
+#======= End labels: Exported 112 labels for es ES =====
