--- a/lams_learning/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = learner_java
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:47:31 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:51:09 CST 2018 
  
 #=================== labels for Learner (Java) =================# 
 
@@ -94,8 +94,6 @@ label.learner.progress.support  =Actividades adjuntas
 label.submit.button  =Seleccionar
 label.learner.progress.review.activity  =Revisar actividad
 label.schedule.gate.reach  =Ha llegado a la puerta en
-label.schedule.gate.offset.1  =La puerta se abrir\u00e1
-label.schedule.gate.offset.2  =despu\u00e9s.
 label.days  =d\u00edas
 label.hours  =horas
 label.minutes  =minutos
@@ -108,6 +106,82 @@ mynotes.add.new.current.lesson.button  =A\u00f1adir notar en esta lecci\u00f3n
 label.group.confirm.header  =Selecci\u00f3n de grupo
 label.group.confirm.button  =Confirmar
 label.group.confirm.areyoujoining  =\u00bfUnirse al grupo
+message.lesson.finished.report.load.error  =Ha ocurrido un error al cargar la informaci\u00f3n
+message.lesson.finished.ok  =OK
+gradebook.columntitle.mark  =Puntaje
+gradebook.columntitle.activity  =Actividad
+gradebook.columntitle.averageMark  =Puntaje promedio
+gradebook.columntitle.progress  =Progreso
+gradebook.lesson.complete  =Puntaje para esta lecci\u00f3n
+gradebook.learner.lesson.mark  =Su puntaje
+label.kumalive.rubric.name  =Ingrese nombre de r\u00fabrica
+label.kumalive.rubric.up  =Mover hacia arriba
+label.kumalive.rubric.down  =Mover hacia abajo
+label.kumalive.rubric.delete  =Eliminar
+label.kumalive.rubric.choose  =R\u00fabricas para usar
+label.kumalive.title  =Kumalive:
+label.kumalive.wait.start  =Esperando al instructor para comenzar la sesi\u00f3n
+label.kumalive.name.enter  =Ingrese nombre para la sesi\u00f3n
+button.kumalive.create  =Crear
+button.kumalive.finish.kumalive  =Finalizar sesi\u00f3n
+button.kumalive.ask  =Formular pregunta
+button.kumalive.finish.question  =Finalizar pregunta
+button.kumalive.raise  =Levantar mano
+button.kumalive.putdown  =Bajar mano
+label.kumalive.raised.hands  =Manos levantadas
+label.kumalive.learners  =Estudiantes
+label.kumalive.teacher  =Instructor
+label.kumalive.finish.speak  =Terminar de hablar
+label.kumalive.mark.great  =Fantastico!
+label.kumalive.mark.ok  =OK
+label.kumalive.mark.bad  =No muy bien
+message.kumalive.finish.kumalive  =Sesi\u00f3n finalizada. La ventana se cerrar\u00e1.
+message.kumalive.finish.kumalive.confirm  =\u00bfEst\u00e1 seguro que quiere finalizar la sesi\u00f3n?
+message.kumalive.speak.not.raised.hand  =\u00bfQuiere
+label.kumalive.closed  =No tienes conexi\u00f3n con sesi\u00f3n. Intente cerrar esta ventana y abrirla nuevamente.
+label.kumalive.report.full.name  =Nombre
+label.kumalive.report.sheet.header  =Informe de {0}
+label.kumalive.report.sheet.header.learners  =Informe
+label.kumalive.report.name  =Nombre de sesi\u00f3n online
+label.kumalive.report.mark.none  =Sin puntaje
+label.kumalive.report.mark  =Puntaje
+label.kumalive.report.first.name  =Nombre
+label.kumalive.report.last.name  =Apellido
+label.kumalive.report.login  =Nombre de usuario
+label.kumalive.report.attempt  =Intento
+label.kumalive.report.average  =Promedio
+label.kumalive.report.time  =Hora
+message.kumalive.report.load.error  =Ha ocurrido un error al cargar la informaci\u00f3n del reporte
+button.kumalive.ok  =OK
+button.kumalive.report.export.all  =Exportar todo
+button.kumalive.report.export.selected  =Exportar solo seleccionados
+button.kumalive.poll  =Encuesta
+button.kumalive.poll.create  =Crear encuesta
+label.kumalive.poll.question  =Pregunta (opcional)
+label.kumalive.poll.question.tip  =por ejemplo: \u00bfPor qu\u00e9 el cielo es azul?
+label.kumalive.poll.answer  =Respuestas
+label.kumalive.poll.answer.true  =Verdadero
+label.kumalive.poll.answer.false  =Falso
+label.kumalive.poll.answer.positive  =Positivo
+label.kumalive.poll.answer.negative  =Negativo
+label.kumalive.poll.answer.yes  =Si
+label.kumalive.poll.answer.no  =No
+label.kumalive.poll.answer.custom  =Personalizar...
+label.kumalive.poll.answer.custom.tip  ={Poner} {cada} {respuesta} {en} {par\u00e9ntesis}
+label.kumalive.poll.answer.custom.error.syntax  =La sintaxis de respuesta personalizada es incorrecta. Ejemplo: {primera respuesta} {segunda respuesta}
+label.kumalive.poll.answer.custom.error.count  =M\u00e1ximo 9 respuestas permitidas
+button.kumalive.poll.start  =\u00a1Pregunta ahora!
+button.kumalive.poll.vote  =Votar
+button.kumalive.poll.finish  =Finalizar encuesta
+message.kumalive.poll.finish.confirm  =\u00bfSeguro que quieres terminar esta encuesta?
+button.kumalive.poll.close  =Cerrar encuesta
+button.kumalive.poll.release.votes  =Mostrar votos de los estudiantes
+message.kumalive.poll.release.votes.confirm  =\u00bfSeguro que quieres mostrar los resultados de la encuesta a los estudiantes que votaron?
+button.kumalive.poll.release.voters  =Mostrar los votos y los votantes a los estudiantes
+message.kumalive.poll.release.voters.confirm  =\u00bfEst\u00e1 seguro que quiere mostrar el resultado de la votaci\u00f3n y
+label.kumalive.poll.missing.voters  =Sin votos
+label.kumalive.poll.results  =Resultados
+label.kumalive.poll.votes.total  =Votos totales
 
 
-#======= End labels: Exported 102 labels for es ES =====
+#======= End labels: Exported 176 labels for es ES =====
