--- a/lams_learning/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = learner_java
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:41:56 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:51:12 CST 2018 
  
 #=================== labels for Learner (Java) =================# 
 
@@ -58,7 +58,7 @@ label.branching.refresh.message  =Klikk p\u00e5 neste dersom du blir fortalt at 
 label.branching.preview.message  =Du har n\u00e5dd en forgrening. Fordi du er i en forh\u00e5ndsvisnings modus, s\u00e5 kan du velge hvilken gren du \u00f8nsker \u00e5 se ved \u00e5 klikke p\u00e5 velg. Klikk p\u00e5 avslutt for \u00e5 forlate forgreningen og for \u00e5 fortsette til neste aktivitet.
 label.branching.title  =Forgrening
 label.sequence.empty.message  =Det er ingen aktiviteter som m\u00e5 sluttf\u00f8res i denne delen av leksjonen. Klikk p\u00e5 neste for \u00e5 fortsette.
-label.my.progress  =Min fremgang
+label.my.progress  =Min progresjonsstatus
 label.resume  =Fortsette
 message.activity.options.note.maximum  =Merk: Maksimalt antall aktiviteter du kan fors\u00f8ke er{0}. Du kan g\u00e5 tilbake til aktiviteter som er startet og avsluttet ved \u00e5 benytte fremdrifts menyen.
 message.activity.set.options.activityCount  =Du m\u00e5 minimum fullf\u00f8re {0} av {1} sekvenser for \u00e5 avslutte
@@ -155,6 +155,33 @@ message.kumalive.report.load.error  =Feil ved opplasting av rapporten
 button.kumalive.ok  =OK
 button.kumalive.report.export.all  =Eksporter alt
 button.kumalive.report.export.selected  =Eksport er valgt
+button.kumalive.poll  =Avstemming
+button.kumalive.poll.create  =Lag avstemning
+label.kumalive.poll.question  =Sp\u00f8rsm\u00e5l (valgfritt)
+label.kumalive.poll.question.tip  =for eksempel: Hvorfor er himmelen bl\u00e5?
+label.kumalive.poll.answer  =Svar
+label.kumalive.poll.answer.true  =Riktig
+label.kumalive.poll.answer.false  =Feil
+label.kumalive.poll.answer.positive  =Positiv
+label.kumalive.poll.answer.negative  =Negativ
+label.kumalive.poll.answer.yes  =Ja
+label.kumalive.poll.answer.no  =Nei
+label.kumalive.poll.answer.custom  =Tilpasset...
+label.kumalive.poll.answer.custom.tip  ={sett} {hvert} {svar} {i} {curly} {parentes}
+label.kumalive.poll.answer.custom.error.syntax  =Egendefinert svarsyntax er feil. Eksempel: {f\u00f8rste svar} {andre svar}
+label.kumalive.poll.answer.custom.error.count  =Maksimalt 9 svar er tillatt
+button.kumalive.poll.start  =Sp\u00f8r n\u00e5
+button.kumalive.poll.vote  =Stem
+button.kumalive.poll.finish  =Avslutt avstemningen
+message.kumalive.poll.finish.confirm  =Er du sikker p\u00e5 at du vil fullf\u00f8re denne avstemmingen og forhindre at studentene stemmer?
+button.kumalive.poll.close  =Lukk avstemning
+button.kumalive.poll.release.votes  =Vis stemmer til studentene
+message.kumalive.poll.release.votes.confirm  =Er du sikker p\u00e5 at du vil vise avstemningsresultater til studenter som stemte?
+button.kumalive.poll.release.voters  =Vis stemmer og velgere til studentene
+message.kumalive.poll.release.voters.confirm  =Er du sikker p\u00e5 at du vil vise avstemningsresultater og velgeres navn til studentene ?
+label.kumalive.poll.missing.voters  =Ikke stemt
+label.kumalive.poll.results  =Resultat
+label.kumalive.poll.votes.total  =Total antall stemmer
 
 
-#======= End labels: Exported 149 labels for no NO =====
+#======= End labels: Exported 176 labels for no NO =====
