--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:57:47 CST 2018 
  
 #=================== labels for Assessment =================# 
 
@@ -11,11 +11,9 @@ activity.description  =Herramienta para crear ex\u00e1menes
 activity.helptext  =Crear preguntas para evaluar a los estudiantes
 tool.display.name  =Ex\u00e1menes
 tool.description  =Herramienta para crear ex\u00e1menes
-errorPage.title  =Error en la p\u00e1gina
-errorPage.heading  =Se produjo alg\u00fan error al gestionar su solicitud
 label.authoring.heading  =Examen Edici\u00f3n
 label.author.title  =Ex\u00e1menes
-label.authoring.heading.basic  =B\u00e1sico
+label.authoring.heading.basic  =Contenido
 label.authoring.heading.basic.desc  =Informaci\u00f3n b\u00e1sica
 label.authoring.heading.advance.desc  =Informaci\u00f3n avanzada
 label.authoring.basic.title  =T\u00edtulo
@@ -108,10 +106,6 @@ error.default.grade.wrong.format  =La calificaci\u00f3n por defecto debe ser de 
 error.penalty.factor.wrong.format  =Factor de penalizaci\u00f3n debe ser un n\u00famero de punto flotante (ejemplo: 0.10, 1.0, 5.15, etc)
 error.question.name.blank  =Nombre de la pregunta no puede estar en blanco.
 error.question.text.blank  =Texto de la pregunta no puede estar en blanco.
-error.msg.upload.file.not.found  =No se pudo encontrar el archivo cargado {0}.
-error.msg.file.not.found  =Archivo no encontrado se produce una excepci\u00f3n al cargar archivo.
-error.msg.io.exception  =IOException se produce al cargar de archivo. Reporte este problema al administrador.
-error.msg.invaid.param.upload  =InvalidParameterException al intentar subir el archivo. Reporte este problema al administrador.
 error.msg.default.content.not.find  =No se pudo recuperar el contenido predeterminado para esta herramienta.
 error.monitoring.export.excel  =Exportar informe de examen fracasa por esta raz\u00f3n: {0}
 authoring.msg.cancel.save  =\u00bfQuieres cerrar la ventana sin guardar?
@@ -126,7 +120,7 @@ label.learning.short.answer.answer  =Respuesta:
 label.learning.true.false.true  =VERDADERO
 label.learning.true.false.false  =Falso
 label.learning.ordering.sort.answers  =Ordenar las respuestas en el orden correcto
-label.learning.marks  =Calificaci\u00f3n: {0}/{1}.
+label.learning.marks  =Puntaje: {0}/{1}.
 label.learning.penalty  =Este intento atrajo a una pena de {0}.
 label.learning.finish.test  =Finalizar
 label.learning.submit.all  =Enviar todas las respuestas
@@ -176,19 +170,15 @@ label.monitoring.user.summary.ok  =OK
 label.monitoring.question.summary.history.responses  =Las respuestas a la pregunta
 label.monitoring.question.summary.title  =T\u00edtulo
 label.monitoring.question.summary.question  =Pregunta
-label.monitoring.question.summary.default.mark  =Calificaci\u00f3n por defecto
+label.monitoring.question.summary.default.mark  =Puntaje predeterminado
 label.monitoring.question.summary.penalty  =Factor de penalizaci\u00f3n
-label.monitoring.question.summary.average.mark  =Calificaci\u00f3n media
+label.monitoring.question.summary.average.mark  =Puntaje promedio
 label.monitoring.question.summary.group  =Grupo:
 label.monitoring.question.summary.ok  =Ok
-label.export.portfolio.activity.summary  =Resumen de actividad
-label.export.portfolio.question.summaries  =Res\u00famenes de preguntas
-message.monitoring.edit.activity.not.editable  =Esta actividad ya no es modificable.
-output.desc.learner.total.score  =La puntuaci\u00f3n total del estudiante
+output.desc.learner.total.score  =El puntaje total del estudiante
 output.desc.learner.time.taken  =Tiempo invertido
 output.desc.learner.number.of.attempts  =N\u00famero de intentos realizados por el estudiante
-output.user.score.for.question  =Puntuaci\u00f3n del estudiante para la pregunta:
-export.title  =Exportar portfolio del examen
+output.user.score.for.question  =Puntaje del estudiante para la pregunta:
 error.form.validation.error  =Tiene 1 error en un formulario. Se ha puesto de relieve
 error.form.validation.errors  =Tiene {0} errores en un formulario. Se han puesto de relieve
 error.form.validation.hundred.score  =Una de las respuestas debe tener una calificaci\u00f3n del 100% por lo que es posible obtener la m\u00e1xima calificaci\u00f3n para esta pregunta.
@@ -199,11 +189,10 @@ define.later.message  =Por favor, espere a que el profesor finalice el contenido
 button.try.again  =Int\u00e9ntelo de nuevo
 activity.title  =Examen
 label.authoring.save.button  =Guardar
-label.authoring.heading.advance  =Avanzado
+label.authoring.heading.advance  =Configuraci\u00f3n
 label.down  =Mover hacia abajo
 label.finished  =Finalizar
 label.finish  =Finalizar
-error.msg.repository  =Ha ocurrido un error en el repositorio de archivos.
 label.on  =S\u00ed
 label.off  =No
 monitor.summary.th.advancedSettings  =Configuraci\u00f3n avanzada
@@ -216,7 +205,7 @@ label.export.exported.on  =Exportado:
 label.export.question.summary  =Resumen de pregunta
 label.export.user.summary  =Resumen de estudiante
 label.export.date.attempted  =Fecha de intento
-label.export.mark  =Calificaci\u00f3n
+label.export.mark  =Puntaje
 label.export.time.taken  =Tiempo invertido en la actividad desde el inicio (segundos)
 label.export.average  =Promedio
 label.export.summary.by.user  =Resumen por usuario
@@ -234,14 +223,14 @@ authoring.info.teacher.set.restriction  =Despu\u00e9s de {0} no se podr\u00e1 re
 monitor.summary.notification  =Notificaci\u00f3n
 monitor.summary.date.restriction.set  =Restricci\u00f3n de fecha activada
 monitor.summary.date.restriction.removed  =Restricci\u00f3n de fecha desactivada
-label.authoring.advance.passing.mark  =Nota para pasar
+label.authoring.advance.passing.mark  =Puntaje requerido para continuar
 label.authoring.advance.choose.restriction  =Seleccionar restricci\u00f3n:
 label.authoring.advance.passing.mark.none  =Ninguna
 label.learning.havent.reached.passing.mark  =No ha alcanzado la nota para pasar esta actividad que es {0}. Int\u00e9ntelo nuevamente.
 label.authoring.basic.add.question.to.pool  =A\u00f1adir pregunta a la banco
 label.authoring.basic.add.question.to.list  =Agregar a la lista de preguntas
 label.authoring.basic.question.bank.title  =Banco de preguntas
-label.authoring.basic.list.header.mark  =Nota/Calificaci\u00f3n
+label.authoring.basic.list.header.mark  =Puntaje
 label.authoring.basic.type.random.question  =Pregunta al azar
 label.authoring.basic.select.random.question  =Pregunta al azar del banco
 label.authoring.basic.random.question  =Pregunta
@@ -264,7 +253,7 @@ label.export.reflection  =Reflexiones
 label.continue  =Continuar
 label.edit  =Editar
 label.submit  =Finalizar
-label.authoring.advance.numbered.questions  =Activar numeraci\u00f3n de preguntas
+label.authoring.advance.numbered.questions  =Habilitar numeraci\u00f3n de preguntas
 label.learning.draft.autosaved  =Borrador se ha auto-guardado
 label.waiting.for.leader  =Por favor, espere mientras alguien se elige como l\u00edder de grupo
 label.users.from.group  =Otros usuarios que participan en el grupo:
@@ -286,10 +275,69 @@ label.words  =Palabras:
 message.no.reflection.available  =No hay reflexi\u00f3n disponible.
 label.authoring.basic.type.mark.hedging  =Apostar notas
 label.option.correct  =Correcta?
-label.assign.hedging.mark  =Asignar nota a las respuestas. Max posible nota: {0}
+label.assign.hedging.mark  =Asignar puntaje a las respuestas. Max puntaje posible: {0}
 label.learning.submit  =Enviar
-warn.mark.hedging.wrong.total  =Para continuar, todas las preguntas deben tener todas las marcas disponibles asignados.
+warn.mark.hedging.wrong.total  =Para continuar, todas las preguntas deben tener todos los puntajes disponibles asignados.
 label.incorrect.answer.nullifies.mark  =Asigna calificaci\u00f3n marca s\u00f3lo cuando se seleccionan las respuestas correctas.
+label.export.summary  =Resumen
+label.justify.hedging.marks  =Por favor, justifique su asignaci\u00f3n de puntos.
+label.select.leader  =Selecci\u00f3n de l\u00edder
+label.question.options  =Opciones de preguntas
+label.activity.completion  =Al finalizar actividad
+label.notifications  =Notificaciones
+label.ask.for.hedging.justification  =Preguntar por justificacion por asignaci\u00f3n de puntos
+label.number.learners.per.session  =Estudiantes por sesio\u00f3n
+label.tool.output  =Resultados de la actividad
+output.desc.best.score  =Mejor puntaje
+label.tool.output.has.been.changed  =Ha cambiado el resultado de la actividad
+output.desc.first.score  =Primer puntaje
+output.desc.average.score  =Puntaje promedio
+label.waiting.for.leader.launch.time.limit  =El l\u00edder aun no ha comenzado la actividad. Espere a este lo haga.
+label.waiting.for.leader.finish  =El l\u00edmite de tiempo establecido por el instructor ha expirado. Espere hasta que un l\u00edder del grupo env\u00ede las respuestas.
+warn.mark.hedging.wrong.justification  =La justificaci\u00f3n no puede dejarse en blanco
+error.import.file.format  =El archivo no es en formato .xml.
+label.file  =Archivo
+errors.maxfilesize  =El tama\u00f1o del archivo excede del m\u00e1ximo permitido de {0}
+label.summary.downloaded  =Resumen descargado
+label.not.answered  =Sin contestar
+label.other  =Otros
+label.graph.help  =En los gr\u00e1ficos a continuaci\u00f3n, haga clic en una barra en el gr\u00e1fico y luego use la rueda del mouse para acercar y alejar el gr\u00e1fico. Una vez que se acerca, la selecci\u00f3n gris en el gr\u00e1fico inferior se puede arrastrar hacia la izquierda o hacia la derecha para mostrar un conjunto diferente de marcas.
+label.lowest.mark  =Puntaje m\u00e1s bajo:
+label.highest.mark  =Puntaje m\u00e1s alto:
+label.number.learners  =N\u00famero de estudiantes
+label.percentage  =Porcentaje
+label.operation.failed  =La operaci\u00f3n ha fallado.
+label.number.groups.finished  =Grupos que han terminado
+label.marks  =Puntaje
+label.number.learners.in.mark.range  =N\u00famero de estudiantes en el rango de puntaje
+label.number.groups.in.mark.range  =N\u00famero de grupos en el rango de puntaje
+label.average.mark  =Puntaje promedio
+label.error  =Error
+error.loaderror  =Hubo un error al cargar el contenido. Si el problema persiste contacte al administrador del sistema.
+label.ok  =OK
+message.monitoring.edit.activity.warning  =Advertencia: si edita y modifica una pregunta o cambia una respuesta que un l\u00edder ya ha respondido, el puntaje para todo el grupo por la pregunta modificada se eliminar\u00e1 permanentemente ya que se supone que la pregunta ha cambiado.
+label.enable.confidence.levels  =Incluir nivel de confianza
+label.what.is.your.confidence.level  =\u00bfQu\u00e9 nivel de confianza tiene en la respuesta seleccionada?
+label.confidence  =Confianza
+label.no.question.references  =No ha incluido pregunta alguna en la lista. \u00bfEsta seguro que desea proceder?
+label.hide.name.column  =Esconder columna de nombre
+label.ae.questions.marks  =Ejercicios de aplicaci\u00f3n: Preguntas y puntaje
+label.ira.questions.marks  =iRAT: Preguntas y puntaje
+label.attendance  =Asistencia
+label.show.students.choices  =Mostrar resultados
+label.hide.students.choices  =Esconder resultados
+label.print  =Imprimir
+label.excel.export  =Exportar Excel
+label.teams  =Equipos
+label.no.questions.in.question.bank  =No ha incluido pregunta alguna en la lista. \u00bfEsta seguro que desea proceder sin preguntas?
+label.authoring.advance.disclose.answers  =Habilitar opci\u00f3n para revelar respuestas correctas y de los grupos.
+label.learning.summary.other.team.answers  =Respuestas de otros grupos
+label.learning.summary.selected.by  =Seleccionado por:
+label.disclose.correct.answers  =Revelar respuesta correcta
+label.disclose.groups.answers  =Revelar repuestas de grupos
+label.disclose.all.correct.answers  =Revelar todas las respuestas correctas
+label.disclose.all.groups.answers  =Revelar todas las respuestas de los grupos
+label.prefix.sequential.letters.for.each.answer  =A\u00f1adir prefijo de letras secuenciales  para cada respuesta [ej: a), b), c)..]
 
 
-#======= End labels: Exported 284 labels for es ES =====
+#======= End labels: Exported 332 labels for es ES =====
