--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Apr 02 18:19:29 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:57:48 CST 2018 
  
 #=================== labels for Assessment =================# 
 
@@ -330,6 +330,14 @@ label.print  =Skriv ut
 label.excel.export  =Eksporter til Excel
 label.teams  =Grupper
 label.no.questions.in.question.bank  =Det er ikke lagt til noen sp\u00f8rsm\u00e5l p\u00e5 sp\u00f8rsm\u00e5lslisten. \u00d8nsker du \u00e5 fortsette uten sp\u00f8rsm\u00e5l ?
+label.authoring.advance.disclose.answers  =Oppgi studentenes og andre gruppers svar p\u00e5 skjermen
+label.learning.summary.other.team.answers  =Svarene til andre grupper
+label.learning.summary.selected.by  =Valgt av:
+label.disclose.correct.answers  =Oppgii de riktige svarene
+label.disclose.groups.answers  =Oppgi gruppens svar
+label.disclose.all.correct.answers  =Oppgi alle riktige svar
+label.disclose.all.groups.answers  =Oppgi alle gruppens svar
+label.prefix.sequential.letters.for.each.answer  =Marker hvert svar med en bokstav sekvensielt
 
 
-#======= End labels: Exported 324 labels for no NO =====
+#======= End labels: Exported 332 labels for no NO =====
