--- a/lams_tool_daco/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_daco/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = daco
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:54:46 CST 2018 
  
 #=================== labels for Data Collection =================# 
 
@@ -31,12 +31,10 @@ button.try.again  =Reintentar
 message.no.reflection.available  =No hay anotaciones
 define.later.message  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
 label.author.title  =Recolecci\u00f3n de datos Edici\u00f3n
-label.authoring.heading.instructions  =Instrucciones
-label.authoring.heading.instructions.desc  =Ingrese instrucciones para modo online y offiline
-label.authoring.heading.advanced  =Avanzado
+label.authoring.heading.advanced  =Configuraci\u00f3n
 label.authoring.heading.advanced.description  =Ingrese opciones avanzadas para recolecci\u00f3n de datos
 label.authoring.heading.basic.description  =Informaci\u00f3n b\u00e1sica para recolecci\u00f3n de datos
-label.authoring.heading.basic  =B\u00e1sico
+label.authoring.heading.basic  =Contenido
 label.authoring.basic.title  =Advanzado
 label.authoring.basic.instruction  =Instrucciones
 label.authoring.basic.answeroption  =Opciones de respuestas
@@ -44,7 +42,6 @@ label.authoring.basic.answeroption.add  =Agregar opci\u00f3n
 label.authoring.basic.answeroption.ordinal  =ABCDEFGHIJKLMN\u00d1OPQRSTUVWXYZ
 label.authoring.basic.answeroption.up  =Mover hacia arriba
 label.authoring.basic.answeroption.down  =Mover hacia abajo
-label.authoring.basic.download  =Descargar
 label.authoring.basic.question.add  =Agregar pregunta
 label.authoring.basic.textfield  =Una l\u00ednea de texto
 label.authoring.basic.textfield.add  =Agregar pregunta con respuesta de una l\u00ednea de texto
@@ -95,15 +92,6 @@ label.authoring.advanced.record.nolimit  =Sin limite
 label.authoring.advanced.lock.on.finished  =No permitir modificaciones una vez terminado
 label.authoring.advanced.notify.onlearnerentry  =Notificar a los tutores cuando el estudiante ingresa a la actividad
 label.authoring.advanced.notify.onrecordsubmit  =Notificar a los tutores cuando el estudiante agrega un registro.
-label.authoring.online.instruction  =Instrucciones de modo online
-label.authoring.online.file  =Subir archivo mode online
-label.authoring.online.filelist  =Archivos Modo Online
-label.authoring.online.upload  =Cargar
-label.authoring.offline.file  =Archivos modo offline
-label.authoring.offline.instruction  =Instrucciones de modo offline
-label.authoring.offline.filelist  =Instrucciones de modo offline
-label.authoring.offline.upload  =Cargar
-label.authoring.choosefile.button  =Seleccionar archivo
 label.authoring.save.button  =Guardar
 message.authoring.cancel.save  =\u00bfEsta seguro que quiere cerrar la ventana sin guardar cambios?
 label.learning.title  =Colecci\u00f3n de Datos
@@ -152,12 +140,10 @@ message.learning.warnLockOnFinish  =Atenci\u00f3n: una vez finalizada esta activ
 message.learning.addrecordsuccess  =El registro ha sido a\u00f1adido.
 message.learning.editrecordsuccess  =El registro se ha actualizado.
 message.learning.activityLocked  =El profesor ha configurado esta actividad de manera que no permita m\u00e1s respuestas una vez finalizada la actividad.
-message.learning.offline  =Esta actividad ha sido se\u00f1alada para realizarse en forma offline. Por favor, consulte con su profesor.
 label.monitoring.close  =Cerrar
 title.monitoring  =Colecci\u00f3n de Datos Seguimiento
 title.monitoring.recordlist  =Lista de registros
 tab.monitoring.statistics  =Estad\u00edsticas
-tab.monitoring.instructions  =Instrucciones
 tab.monitoring.edit.activity  =Editar Actividad
 label.monitoring.fullname  =Nombre completo
 label.monitoring.loginname  =Nombre de usuario
@@ -185,11 +171,9 @@ label.monitoring.hidden  =Escondido
 label.monitoring.edit.activity.cancel  =Cancelar
 label.monitoring.edit.activity.update  =Actualizar
 label.monitoring.edit.activity.edit  =Editar
-label.monitoring.attachments  =Archivos aduntos
 label.monitoring.user.fullname  =Nombre
 label.monitoring.heading.access  =Lista de estudiantes
 label.monitoring.reflection.heading  =Ver anotaciones
-message.monitoring.edit.activity.not.editable  =La actividad ya no se puede editar
 message.monitoring.summary.no.session  =Los estudiantes todavia no han accedido a esta actividad.
 message.monitoring.summary.no.question.for.group  =No hay preguntas disponibles para este grupo
 label.export.title  =Exportar portfolio de Colecci\u00f3n de Datos
@@ -254,7 +238,6 @@ message.authoring.delete.question  =\u00bfEsta seguro que quiere borrar?
 title.export.spreadsheet  =Exportar a archivo
 label.export.spreadsheet.instruction  =Por favor, elija el formato que desea exportar
 label.export.spreadsheet.choose.format.excel  =MS Excel
-label.export.spreadsheet.choose.format.csv  =CSV (conjunto de caracteres: UTF-8, separador: punto y coma ";")
 button.export  =Exportar
 label.export.spreadsheet.instruction.continue  =y pulse el bot\u00f3n de exportar. Despu\u00e9s de la exportaci\u00f3n con \u00e9xito, puede cerrar esta ventana.
 label.export.file.title  =Exportaci\u00f3n de Colecci\u00f3n de Datos
@@ -264,6 +247,14 @@ label.export.file.user  =Alumno
 label.export.file.answer.date  =A\u00f1adida el
 label.authoring.cancel.button  =Cancelar
 label.learning.submit  =Finalizar
+label.search  =Buscar...
+label.monitoring.average.number.records.heading  =N\u00famero promedio de registros
+label.activity.completion  =Al finalizar actividad
+label.notifications  =Notificaciones
+errors.maxfilesize  =El archivo subido excedi\u00f3 el tama\u00f1o m\u00e1ximo: {0}
+error.attachment.executable  =El archivo cargado es ejecutable
+error.attachment.must.be.image  =Formatos de archivo permitidos: JPG, GIF o PNG.
+label.upload.info  =El archivo cargado no debe ser ejecutable y no debe exceder el tama\u00f1o de {0}
 
 
-#======= End labels: Exported 258 labels for es ES =====
+#======= End labels: Exported 249 labels for es ES =====
