--- a/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:17:40 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:47:27 CST 2018 
  
 #=================== labels for Forum =================# 
 
@@ -27,14 +27,14 @@ lable.topic.title.update  =\u00daltimo mensaje
 lable.topic.title.author  =Autor
 lable.topic.title.startedby  =Por
 lable.topic.title.replies  =Respuestas
-lable.topic.title.mark  =Nota de evaluaci\u00f3n
+lable.topic.title.mark  =Puntaje de evaluaci\u00f3n
 lable.topic.subject.by  =De
 label.back.to.forum  =Volver al lista de temas.
 lable.topic.title.message.number  =N\u00famero de aportaciones
-lable.topic.title.average.mark  =Calificaci\u00f3n promedio
+lable.topic.title.average.mark  =Puntaje promedio
 page.title.monitoring.content.userlist  =Monitoreo de lista de estudiantes
-page.title.monitoring.view.user.mark  =Ver calificaci\u00f3n de usuarios
-page.title.monitoring.edit.user.mark  =Editar calificaci\u00f3n de usuarios
+page.title.monitoring.view.user.mark  =Ver puntaje de usuarios
+page.title.monitoring.edit.user.mark  =Editar puntaje de usuarios
 page.title.monitoring.view.activity  =Ver actividad
 page.title.monitoring.edit.activity  =Editar Actividad
 page.title.monitoring.view.instructions  =Ver instrucciones
@@ -44,7 +44,7 @@ page.title.monitoring.definelater  =Definir contenido del foro
 label.monitoring.edit.activity.cancel  =Cancelar
 label.monitoring.edit.activity.update  =Actualizar
 label.monitoring.edit.activity.edit  =Editar
-label.monitoring.statistic.average.mark  =Nota promedio de aportaciones
+label.monitoring.statistic.average.mark  =Puntaje promedio de aportaciones
 lable.monitoring.statistic.total.message  =Total de aportaciones
 error.valueReqd  =Valor requerido
 error.mark.needNumber  =La calificaci\u00f3n tiene que ser un n\u00famero entero
@@ -74,8 +74,8 @@ label.finish  =Finalizar
 label.newtopic  =Nuevo tema
 label.refresh  =Actualizar
 lable.char.left  =Limite de caracteres
-label.basic  =B\u00e1sico
-label.advanced  =Avanzado
+label.basic  =Contenido
+label.advanced  =Configuraci\u00f3n
 label.instructions  =Instrucciones
 button.upload  =Subir
 button.done  =Listo
@@ -96,7 +96,7 @@ lable.update.mark  =Actualizar calificaci\u00f3n
 message.assign.mark  =Asignar calificaci\u00f3n y comentario para el informe
 message.session.name  =Nombre de sesi\u00f3n
 message.monitoring.summary.no.users  =Usuarios no disponibles
-message.view.all.marks  =Ver todas las calificaciones
+message.view.all.marks  =Ver todas las puntuaciones
 message.download.marks  =Descargar calificaciones
 label.monitoring.summary.view.forum  =Ver Foro
 message.monitoring.summary.no.session  =Sesi\u00f3n no disponible
@@ -108,14 +108,14 @@ page.title.monitoring.init  =Seguimiento
 monitoring.tab.statistics  =Estad\u00edsticas
 label.save  =Guardar
 label.cancel  =Cancelar
-authoring.tab.basic  =B\u00e1sico
-authoring.tab.advanced  =Avanzado
+authoring.tab.basic  =Contenido
+authoring.tab.advanced  =Configuraci\u00f3n
 page.title.authoring.init  =Creaci\u00f3n del Foro
 authoring.msg.cancel.save  =\u00bfEst\u00e1 seguro que desea cerrar esta ventana sin salvar previamente?
 define.later.message  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
 button.try.again  =Refrescar
 button.close  =Cerrar
-button.release.mark  =Presentar marcas a estudiantes
+button.release.mark  =Presentar puntaje a estudiantes
 msg.mark.released  =Las marcas de {0} han sido presentadas a los estudiantes.
 label.authoring.advance.allow.upload  =Permitir a los estudiante subir archivos adjuntos
 label.authoring.advance.allow.new.topics  =Permitir a los estudiantes crear nuevos temas de discusi\u00f3n
@@ -144,7 +144,7 @@ error.body.required  =El cuerpo de la aportaci\u00f3n no pude dejarse en blanco.
 title.original.message.reply  =Aportaci\u00f3n original
 output.desc.learner.number.of.posts  =N\u00famero de aportaciones del estudiante en el foro
 label.download.marks.heading.date  =Fecha
-label.download.marks.heading.marks  =Resultados
+label.download.marks.heading.marks  =Puntaje
 label.download.marks.heading.comments  =Comentarios
 label.responses.locked  =Atenci\u00f3n: una vez finalizada esta actividad no podr\u00e1 hacer cambios.
 label.responses.locked.reminder  =El instructor ha configurado este Foro para que una vez finalizado el mismo, no se pueda continuar a\u00f1adiendo aportaciones. Como usted ha retornado, no podr\u00e1 agregar nuevas aportaciones.
@@ -249,6 +249,10 @@ admin.success  =Cambios han sido guardados
 admin.return  =Volver a p\u00e1gina de mantenimiento
 admin.button.save  =Guardar
 admin.keep.learner.content  =No borrar publicaciones de los estudiantes cuando estos son removidos de la actividad.
+label.authoring.advance.enable.anonymous.posts  =Habilitar mensajes an\u00f3nimos
+label.post.anonomously  =Publicar an\u00f3nimamente
+label.anonymous  =Anonimo
+label.anonymous.tooltip  =Seleccione "Publicar an\u00f3nimamente" si quiere esconder su nombre a otros estudiantes. El instructor a\u00fan podr\u00e1 ver su nombre.
 
 
-#======= End labels: Exported 243 labels for es ES =====
+#======= End labels: Exported 247 labels for es ES =====
