--- a/lams_tool_forum/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:17:41 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:47:28 CST 2018 
  
 #=================== labels for Forum =================# 
 
@@ -249,6 +249,10 @@ admin.success  =Oppstillingen ble lagret korrekt
 admin.return  =G\u00e5 tilbake til LAMS vedlikehold
 admin.button.save  =Lagre
 admin.keep.learner.content  =Ikke slett innlegg n\u00e5r studentene blir fjernet fra aktiviteten.
+label.authoring.advance.enable.anonymous.posts  =Knytt til anonym mail
+label.post.anonomously  =Send anonym mail
+label.anonymous  =Anonym
+label.anonymous.tooltip  =Sl\u00e5 p\u00e5 "send anonym mail" for \u00e5 skjule navnet ditt for de andre studentene. Instrukt\u00f8rene vil fortsatt se navnet ditt.
 
 
-#======= End labels: Exported 243 labels for no NO =====
+#======= End labels: Exported 247 labels for no NO =====
