--- a/lams_tool_gmap/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_gmap/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = gmap
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 19:05:31 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:55:05 CST 2018 
  
 #=================== labels for Google Maps =================# 
 
@@ -12,8 +12,8 @@ activity.title  =Mapas
 activity.description  =Mapas Geogr\u00e1ficos Google
 activity.helptext  =Permite usar Mapas de Google para marcar puntos geogr\u00e1ficos
 pageTitle.authoring  =Mapas Autoria
-button.basic  =B\u00e1sico
-button.advanced  =Avanzado
+button.basic  =Contenido
+button.advanced  =Configuraci\u00f3n
 label.authoring.basic.title  =T\u00edtulo
 label.authoring.basic.content  =Contenido
 label.authoring.basic.instructions  =Instrucciones:
@@ -43,8 +43,7 @@ advanced.allowZoom  =Mostrar el controlador de zoom
 advanced.allowTerrain  =Mostrar el controlador de terreno
 advanced.allowSatellite  =Mostrar el controlador de satelite
 advanced.allowHybrid  =Mostrar el controlador de mapas h\u00edbrido
-monitor.summary.title.advanced  =Avanzado
-monitor.summary.title.groups  =Grupos
+monitor.summary.title.advanced  =Configuraci\u00f3n
 monitor.summary.title.map  =Mapa
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
 label.authoring.authoredMarkers  =Puntos
@@ -105,6 +104,10 @@ button.placeMarker  =Fijar posici\u00f3n
 label.nogroups  =No hay grupos en esta actividad.
 button.submit  =Finalizar
 label.activity.completion  =Al finalizar actividad
+label.show.on.map  =Mostrar en mapa
+label.search  =Buscar...
+monitoring.user.fullname  =Nombre
+monitoring.user.reflection  =Anotaci\u00f3n
 
 
-#======= End labels: Exported 99 labels for es ES =====
+#======= End labels: Exported 102 labels for es ES =====
