--- a/lams_tool_imscc/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_imscc/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = imscc
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 04:03:51 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:58:42 CST 2018 
  
 #=================== labels for IMS Common Cartridge =================# 
 
@@ -73,9 +73,9 @@ label.authoring.basic.resource.website  =Sitio web
 label.authoring.basic.title  =T\u00edtulo
 label.authoring.cancel.button  =Cancelar
 label.authoring.heading  =Common Cartridge autor\u00eda
-label.authoring.heading.advance  =Avanzado
+label.authoring.heading.advance  =Configuraci\u00f3n
 label.authoring.heading.advance.desc  =Ingrese opciones avanzadas para Common Cartridge
-label.authoring.heading.basic  =B\u00e1sico
+label.authoring.heading.basic  =Contenido
 label.authoring.heading.basic.desc  =Informaci\u00f3n b\u00e1sica para Common Cartridge
 label.authoring.save.button  =Guardar
 label.author.title  =Common Cartridge
@@ -101,7 +101,6 @@ label.view  =Ver
 lable.learning.minimum.view.number.less  =Debe ber por lo menos {0} de recursos
 message.activityLocked  =El instructor ha establecido esta actividad no le permite ver o compartir m\u00e1s recursos despu\u00e9s de haber finalizado.
 message.alertContentEdit  =Advertencia: Una de las m\u00e1s estudiantes ha accedido a esta actividad. El cambio de este contenido se traducir\u00e1 en los estudiantes reciben una informaci\u00f3n diferente.
-message.monitoring.edit.activity.not.editable  =Esta actividad no es editable
 message.monitoring.summary.no.resource.for.group  =No hay recursos disponible para este grupo.
 message.monitoring.summary.no.session  =Ninguna sesi\u00f3n disponible
 message.no.reflection.available  =No ha reflexiones disponibles
@@ -131,6 +130,9 @@ label.submit  =Finalizar
 label.monitoring.heading  =Seguimiento Common Cartridge
 label.resource.options  =Opciones
 label.activity.completion  =Al finalizar actividad
+errors.maxfilesize  =El archivo subido excedi\u00f3 el tama\u00f1o m\u00e1ximo: {0}
+error.attachment.executable  =El archivo cargado es ejecutable
+label.upload.info  =El archivo cargado no debe ser ejecutable y no debe exceder el tama\u00f1o de {0}
 
 
-#======= End labels: Exported 125 labels for es ES =====
+#======= End labels: Exported 127 labels for es ES =====
