--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = mcq
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:12:43 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:48:43 CST 2018 
  
 #=================== labels for Multiple Choice Questions =================# 
 
@@ -223,6 +223,11 @@ label.show.students.choices  =Show students' choices
 label.hide.students.choices  =Hide students' choices
 label.print  =Print
 label.excel.export  =Excel export
+label.displayFeedbackOnly  =Display only the feedback and not the answers or score
+label.displayNoAnswersOrFeedback  =Do not display answers, score or feedback
+label.monitoring.yesDisplayFeedbackOnly  =Learners are able to see the feedback but no answers or scores for the questions.
+label.monitoring.noDisplayFeedbackOnly1  =Learners are not able to see the feedback for the questions
+label.monitoring.noDisplayFeedbackOnly2  =Do you want to allow learners to see the feedback now?
 
 
-#======= End labels: Exported 217 labels for en AU =====
+#======= End labels: Exported 222 labels for en AU =====
