--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,143 +2,63 @@ appName = mcq
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:48:43 CST 2018 
  
 #=================== labels for Multiple Choice Questions =================# 
 
 activity.title  =Opci\u00f3n M\u00faltiple
-activity.description  =Crea preguntas de evaluaci\u00f3n de manera automatizada.ej. Preguntas de opci\u00f3n m\u00faltiple y de verdadero/falso. Puede proporcionar feedback y puntuaci\u00f3n.
-activity.helptext  =El estudiante contesta una serie de preguntas de evaluaci\u00f3n automatizadas, por  ej.  Opci\u00f3n m\u00faltiple y preguntas de verdadero/falso. Las opciones incluyen feedback para cada pregunta y puntuaci\u00f3n. Las respuestas a las preguntas se acumulan para una puntuaci\u00f3n general.
+activity.description  =Crea preguntas de evaluaci\u00f3n de manera automatizada.ej. Preguntas de opci\u00f3n m\u00faltiple y de verdadero/falso. Puede proporcionar feedback y puntaje.
+activity.helptext  =El estudiante contesta una serie de preguntas de evaluaci\u00f3n automatizadas, por  ej.  Opci\u00f3n m\u00faltiple y preguntas de verdadero/falso. Las opciones incluyen feedback para cada pregunta y puntaje. Las respuestas a las preguntas se acumulan para una puntuaci\u00f3n general.
 tool.display.name  =Herramienta de preguntas de opci\u00f3n m\u00faltiple
 tool.description  =Herramienta para que los estudiantes respondan una serie de preguntas de evaluaci\u00f3n de forma automatizada
 label.tool.shortname  =MCQ
-label.authoring.mc  =Preguntas de Opci\u00f3n M\u00faltiple
-label.basic  =B\u00e1sico
-label.advanced  =Avanzado
+label.basic  =Contenido
+label.advanced  =Configuraci\u00f3n
 label.summary  =Resumen
 label.stats  =Estad\u00edsticas
 label.editActivity  =Actividad de edicion
 label.authoring  =Creando MCQ
 label.learning  =Aprendiendo con MCQ
-label.preview  =Vista previa MCQ
-label.exportPortfolio  =Exportar la carpeta MCQ
-label.exportPortfolio.simple  =Exportar carpeta
-label.authoring.mc.basic  =Por favor, defina las preguntas
 label.monitoring  =Seguimiento de MCQ
-label.mc.questions  =Preguntas de Opciones M\u00faltiples
-label.authoring.mc.basic.editOptions  =Por favor, defina la pregunta y las opciones
-label.advanced.definitions  =Definiciones Avanzadas
 label.authoring.title  =T\u00edtulo
 label.authoring.instructions  =Instrucciones
 label.Questions  =Preguntas
-label.weight  =Peso
 label.addNewQuestion  =A\u00f1adir una nueva pregunta
 label.moveDown  =Abajo
 label.add.question  =A\u00f1adir nuevo
 label.add.option  =A\u00f1adir nuevo
-label.mc.options  =Respuestas Posibles
 label.mc.options.col  =Respuestas Posibles
-label.fileContent  =Contenido de archivo
-label.learner.message  =Conteste las preguntas hasta alcanzar la puntuaci\u00f3n m\u00ednima
-label.individual.results.withRetries  =Resultados para opci\u00f3n multiple con posibilidad de reintentar
-label.individual.results.withoutRetries  =Resultados para opci\u00f3n multiple sin posibilidad de reintentar
+label.learner.message  =Conteste las preguntas hasta alcanzar el puntaje m\u00ednimo
 label.viewAnswers  =Respuestas anteriores
-label.learner.viewAnswers  =Respuestas del estudiante
-label.withRetries.results.summary  =Opci\u00f3n multiple con resumen de reintentos
-label.withoutRetries.results.summary  =Opci\u00f3n multiple sin resumen de reintentos
-label.learnersFinished  =Los estudiantes han terminado. La calificaci\u00f3n m\u00ednima es
-label.learnersFinished.simple  =Los estudiantes han terminado
 label.topMark  =Calificaci\u00f3n m\u00e1xima
 label.avMark  =Calificaci\u00f3n promedio
 label.loMark  =Calificaci\u00f3n inferior
 count.total.user  =Cuenta del total de usuarios
-count.finished.user  =Finalizado el c\u00e1lculo de usuario
-count.max.attempt  =Contar n\u00famero m\u00e1ximo de intentos
-label.attempts  =Intentos
 label.mark  =Calificaci\u00f3n
-label.you.answered  =Su respuesta
-label.learner.answered  =Respuesta del estudiante
 label.redo.questions  =Reestablecer las preguntas
-label.view.summary  =Ver resumen
-label.view.answers  =Ver respuestas
 label.view  =Vista
 label.finished  =Finalizar
-label.attempt  =Intento
-button.cancel  =Cancelar
-button.upload  =Subir
-button.preview  =Vista previa
-button.advanced  =Avanzado
-button.instructions  =Instrucciones
-tool.icon.name  =MC
-button.add  =A\u00f1adir
-button.addNewQuestion  =A\u00f1adir
-button.remove  =Borrar
 button.submit  =Enviar
-button.done  =Terminado
-button.getNextQuestion  =Siguiente
-button.next  =Siguiente
-button.nextQuestion  =Siguiente pregunta
 button.continue  =Continuar
-button.getPreviousQuestion  =Anterior
-label.percent  =Porcentaje
-label.option  =Opci\u00f3n
-label.option1  =Opci\u00f3n 1
-label.options  =Opciones
-label.option.correct  =Correcto
-label.candidateAnswers  =Respuestas posibles
 label.isCorrect  =\u00bfCorrecto?
-sbmt.successful  =El contenido se ha creado satisfactoriamente
-label.monitoringReport.title  =Monitoriando reporte de titulo
 label.question.only  =Pregunta
 label.question  =Pregunta
-label.question.col  =Pregunta
-label.question1  =Pregunta 1
-radiobox.defineLater  =Definir m\u00e1s adelante
-radiobox.synchInMonitor  =Monitor en Sync
-radiobox.usernameVisible  =Nombre de usuario visible
-radiobox.questionsSequenced  =Preguntas secuenciadas
-radiobox.passmark  =Puntuaci\u00f3n m\u00ednima para continuar a la siguiente actividad
-radiobox.showFeedback  =Mostrar retroacci\u00f3n
-radiobox.sln  =Mostrar informe de los estudiantes
+radiobox.passmark  =Puntaje m\u00ednimo para continuar a la siguiente actividad
 radiobox.onepq  =Una pregunta por p\u00e1gina
 radiobox.retries  =Permitir reintentos
-label.report.title  =Informe de titulo
-label.report.endLearningMessage  =Fin de actividad de mensajeria
-label.offlineInstructions  =Instrucciones offline
-label.onlineInstructions  =Instrucciones en linea
-label.uploadedOfflineFiles  =Archivos offline cargados
-label.uploadedOnlineFiles  =Archivos en linea cargados
 option.correct  =Correcto
-option.incorrect  =Incorrecto
-label.feedback.incorrect  =Retroacci\u00f3n si respondi\u00f3 incorrectamente
-label.feedback.correct  =Retroacci\u00f3n si respondi\u00f3 correctamente
-label.learner.redo  =\u00bfEst\u00e1 seguro de que desea responder las preguntas de nuevo?
-label.learner.bestMark  =Su mejor puntuaci\u00f3n es
 label.outof  =Fuera de
-label.mustGet  =Debe conseguir al menos
-label.toFinish  =Para terminar
 label.save  =Guardar
 label.cancel  =Cancelar
 feedback  =Por favor soluciones los siguientes problemas antes de enviar
-error.questions.submitted.none  =Por favor corrija esto:No se ha enviado ninguna pregunta.
-error.question.empty  =Por favor corrija esto:El texto de la pregunta no puede estar vacio
-error.weights.empty  =Por favor corrija esto:El peso de la pregunta no puede estar vacio
-error.checkBoxes.empty  =Por favor corrija esto:No se ha seleccionado ninguna respuesta posible.
-error.weights.zero  =Por favor corrija esto:El peso de la pregunta no puede ser 0.
-error.weights.notInteger  =Por favor corrija esto:El peso de la pregunta debe ser entero
-error.question.weight.total  =Por favor corrija esto:El peso del total de preguntas:100 ya se ha alcanzado.
-error.answers.duplicate  =Por favor corrija esto:La respuesta posible debe ser unica.
-error.emptyQuestion  =Por favor inserte el texto de la pregunta.La pregunta seleccionada no puede estar vacia.
-error.singleOption  =Por favor corrija esto:Debe haber al menos 2 respuestas posibles
-error.emptyWeight  =Lo siento, no se puede a\u00f1adir una pregunta sin indicar su peso.
-error.passMark.empty  =Por favor corrija esto:La puntuaci\u00f3n m\u00ednima no puede estar vacia.
+error.passMark.empty  =Atenci\u00f3n: debe definir el puntaje m\u00ednimo.
 options.count.zero  =Por favor corrija esto:Debe existir al menos una respuesta posible.
-error.passmark.notInteger  =Por favor corrija esto: La puntuaci\u00f3n m\u00ednima puede unicamente ser un entero
+error.passmark.notInteger  =Atenci\u00f3n: La puntuaci\u00f3n m\u00ednima puede unicamente ser un entero
 error.file.notPersisted  =Ha ocurrido un error:El archivo a\u00fan no esta visible.Por favor guarde todo el contenido primero y vuelva a comprobar.
 error.fileName.empty  =Por favor corrija esto: En las  ''Instrucciones'',el nombre del archivo a cargar no puede estar vac\u00edo.
 error.questions.withNoOptions  =Por favor tenga en cuenta:Las preguntas sin respuestas posibles han sido eliminadas automaticamente.Por favor compruebe el peso total de las preguntas.
 error.answers.empty  =Por favor corrija esto:Las posibles respuestas no pueden estar vac\u00edas.
-error.passMark.greater100  =Por favor corrija esto: La puntuaci\u00f3n m\u00ednima no puede ser mayor que 100%.
+error.passMark.greater100  =Atenci\u00f3n: El puntaje m\u00ednimo no puede ser mayor que 100%.
 error.question.addNotAllowed.thisScreen  =El texto de la pregunta no puede modificarse en esta pantalla puesto que tiene opciones adjuntadas. Por favor use el bot\u00f3n "Opciones"  para editarr el texto de la pregunta.
 error.question.removeNotAllowed.thisScreen  =La pregunta no puede eliminarse puesto que uno o m\u00e1s de los textos de la pregunta se ha modificado. Por favor intente de nuevo sin modificar el texto.
 error.selectedIndex.empty  =No puede continuar. Por favor seleccione la respuesta correcta y haga clic en: "Hecho."
@@ -147,7 +67,6 @@ error.content.inUse  =No se permite la modificaci\u00f3n del contenido puesto qu
 error.noLearnerActivity  =El informe resumen no est\u00e1 disponible puesto que ning\u00fan usuario inici\u00f3 a\u00fan la actividad.
 label.answers  =Respuestas
 button.endLearning  =Finalizar
-label.learning.user  =Usuario
 label.learning.attemptTime  =Intentos fecha/tiempo
 label.learning.response  =Respuesta
 label.user  =Usuario
@@ -155,7 +74,6 @@ label.attemptTime  =Intentos fecha/tiempo
 label.response  =Respuesta
 label.learning.forceOfflineMessage  =Esta actividad ha sido se\u00f1alada para realizarse en forma offline. Por favor, consulte con su profesor.
 error.defineLater  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
-error.noStudentActivity  =Lo sentimos. No se puede generar el informe.Ningun estudiante ha iniciado la actividad todavia.
 group.label  =Grupo
 button.summary  =Resumen
 button.editActivity  =Revise la actividad
@@ -163,10 +81,8 @@ button.stats  =Estado
 label.edit  =Corrija
 label.update  =actualizaci\u00f3n
 label.selectGroup  =seleccionar grupo
-label.learner.progress  =Reporte de progreso del aprendiz
 label.stats.allGroups  =Todos los grupos
 label.stats.totalAllGroups  =Cuenta total de todos los aprendices
-error.system.mc  =Una excepci\u00f3n del sistema ha ocurrido. Por favor contacte a su administrador de sistemas. El error a reportar es{0}.
 authoring.msg.cancel.save  =Esta seguro que desea cancelar? Sus cambios no seran guardados
 label.learning.forceFinishMessage  =El instructor ha decidido terminar esta actividad. Por favor termine esta actividad
 label.correct  =Correcta
@@ -183,15 +99,10 @@ label.tip.editOptions  =Permite editar las opciones de respuesta para esta pregu
 label.tip.removeQuestion  =Remover esta pregunta
 label.tip.removeCandidate  =Remover esta respuesta
 label.studentMarks  =Marcas de los estudiantes
-label.export.learner  =Portfolio para Estudiante
-label.export.teacher  =Portfolio para Instructor
-label.studentMark  =Marca de Estudiante
 label.authoring.title.col  =T\u00edtulo:
 label.authoring.instructions.col  =Instrucciones:
 label.candidateAnswer  =Opci\u00f3n
 label.total  =Total
-label.report.title.col  =T\u00edtulo del reporte:
-label.report.endLearningMessage.col  =Mensaje al final de la actividad:
 label.continue  =Continuar
 label.reflect  =A\u00f1ada Anotaciones al finalizar MCQ con las siguientes instrucciones:
 label.notebook.entries  =Reflexiones de Estudiantes
@@ -199,14 +110,12 @@ label.reflection  =Reflexi\u00f3n
 label.view.reflection  =Ver Reflexi\u00f3n
 label.close  =Cerrar
 label.question.marks  =Puntos
-label.update.list  =Refrescar lista
 label.tip.editQuestion  =Editar pregunta
 candidates.none.correct  =Por favor, resuelva lo siguiente: Debe existir 1 respuesta correcta de al menos 2 posibles respuestas correctas.
 count.finished.session  =N\u00famero final
 label.add.candidates  =Agregar opci\u00f3n
 label.add.new.question  =A\u00f1adir
 label.marks  =Punto(s)
-label.new.question  =Nueva Pregunta
 label.questions  =Preguntas
 label.questions.worth  =Valor de pregunta
 label.save.question  =Crear pregunta
@@ -227,18 +136,16 @@ candidates.setFirst  =Note que la primera respuesta ha sido seleccionada por ust
 candidates.blank  =Atenci\u00f3n: la respuesta no puede ser dejada en blanco
 label.showMarks  =Mostrar a estudiantes las marcas mayor y promedio
 label.randomize  =Presentar respuestas en orden aleatorio
-answers.submitted.none  =No se permite el env\u00edo. Por favor, seleccione al menos una respuesta para cada una de las preguntas.
 message.no.reflection.available  =No hay anotaciones disponibles
 label.attempt.count  =N\u00famero de intentos:
 label.final.attempt  =\u00daltimo intento:
-errors.maxfilesize  =El archivo que intent\u00f3 adjuntar excede el m\u00e1ximo de {0} bytes.
 output.desc.learner.mark  =Puntos totales del estudiante
 output.desc.learner.all.correct  =El estudiante tiene todas las respuestas correctas
 label.displayAnswers  =Mostrar las respuestas despu\u00e9s de la \u00faltima pregunta
 label.monitoring.yesDisplayAnswers  =Los estudiantes pueden ver las respuestas a todas las preguntas.
 label.monitoring.noDisplayAnswers1  =Los estudiantes no pueden ver las respuestas a las preguntas.
 label.monitoring.noDisplayAnswers2  =\u00bfDesea permitir que los estudiantes vean las respuestas a las preguntas?
-button.monitoring.noDisplayAnswers  =S\u00ed
+button.monitoring.yes  =S\u00ed
 output.desc.learner.all.correct.true  =Todas las respuestas han sido correctas
 output.desc.learner.all.correct.false  =No todas las respuestas han sido correctas
 label.monitoring.downloadMarks.button  =Exportar Resultados
@@ -287,6 +194,40 @@ label.prefix.sequential.letters.for.each.answer  =Poner prefijo de letra para ca
 label.info.use.select.leader.outputs  =Opci\u00f3n de l\u00edder de grupo est\u00e1 habilitada
 label.monitoring.group.leader  =L\u00edder
 label.authoring.export.qti  =Exportar IMS QTI
+label.select.leader  =Seleccionar l\u00edder
+label.question.options  =Opciones de preguntas
+label.activity.completion  =Al finalizar actividad
+label.tool.output  =Resultados de la actividad
+label.tool.output.has.been.changed  =Ha cambiado el resultado de la actividad
+label.operation.failed  =La operaci\u00f3n ha fallado
+answers.submitted.none  =Seleccione al menos una respuesta para cada una de las preguntas.
+label.summary.downloaded  =El archivo de puntajes ha sido descargado.
+label.number.learners  =Estudiantes
+label.number.groups.finished  =N\u00famero de grupos que han finalizado
+label.graph.help  =En los gr\u00e1ficos a continuaci\u00f3n, haga clic en una barra en el gr\u00e1fico y luego use la rueda del mouse para acercar y alejar el gr\u00e1fico. Una vez que se acerca, la selecci\u00f3n gris en el gr\u00e1fico inferior se puede arrastrar hacia la izquierda o hacia la derecha para mostrar un conjunto diferente de marcas.
+label.lowest.mark  =Puntaje m\u00e1s bajo:
+label.highest.mark  =Puntaje m\u00e1s alto:
+label.number.learners.in.mark.range  =N\u00famero de estudiantes en el rango de puntaje
+label.number.groups.in.mark.range  =N\u00famero de grupos en el rango de puntaje
+label.average.mark  =Puntaje promedio
+label.error  =Error
+error.loaderror  =Hubo un error al cargar el contenido. Si el problema persiste contacte al administrador del sistema.
+label.ok  =OK
+message.monitoring.edit.activity.warning  =Advertencia: si edita y modifica una pregunta o cambia una respuesta que un l\u00edder ya ha respondido, el puntaje para todo el grupo por la pregunta modificada se eliminar\u00e1 permanentemente ya que se supone que la pregunta ha cambiado.
+label.enable.confidence.levels  =Habilitar
+label.confidence  =\u00bfQu\u00e9 nivel de confianza tiene en la respuesta seleccionada?
+label.what.is.your.confidence.level  =Confianza
+label.ira.questions.marks  =iRAT Preguntas y puntaje
+label.attendance  =Asistencia
+label.show.students.choices  =Mostrar resultados
+label.hide.students.choices  =Esconder resultados
+label.print  =Imprimir
+label.excel.export  =Exportar Excel
+label.displayFeedbackOnly  =Mostrar solamente el feedback de preguntas pero no las respuestas o el puntaje
+label.displayNoAnswersOrFeedback  =No mostrar respuestas, puntaje o feedback.
+label.monitoring.yesDisplayFeedbackOnly  =Estudiantes pueden ver el feedback pero no las respuestas o el puntaje de las preguntas.
+label.monitoring.noDisplayFeedbackOnly1  =Estudiantes no pueden ver el feedback de las preguntas.
+label.monitoring.noDisplayFeedbackOnly2  =\u00bfQuiere mostrar el feedback de las preguntas ahora?
 
 
-#======= End labels: Exported 281 labels for es ES =====
+#======= End labels: Exported 222 labels for es ES =====
