--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = mcq
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:12:46 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:48:44 CST 2018 
  
 #=================== labels for Multiple Choice Questions =================# 
 
@@ -145,7 +145,7 @@ label.displayAnswers  =Vis riktige svar og resultat etter siste sp\u00f8rsm\u00e
 label.monitoring.yesDisplayAnswers  =Studentene kan se svarene til alle sp\u00f8rsm\u00e5lene
 label.monitoring.noDisplayAnswers1  =Studentene kan ikke se svarene til alle sp\u00f8rsm\u00e5lene
 label.monitoring.noDisplayAnswers2  =Vil du la studentene f\u00e5 se svarene n\u00e5 ?
-button.monitoring.noDisplayAnswers  =Ja
+button.monitoring.yes  =Ja
 output.desc.learner.all.correct.true  =Alt korrekt
 output.desc.learner.all.correct.false  =Ikke helt riktig
 label.monitoring.downloadMarks.button  =Eksporter karakterer
@@ -223,6 +223,11 @@ label.show.students.choices  =Vis studentens valg
 label.hide.students.choices  =Skjul studentens valg
 label.print  =Skriv ut
 label.excel.export  =Eksporter til Excel
+label.displayFeedbackOnly  =Vis bare tilbakemeldingen og ikke svarene eller poengene
+label.displayNoAnswersOrFeedback  =Ikke vis svar, poeng eller tilbakemelding
+label.monitoring.yesDisplayFeedbackOnly  =Studentene kan se tilbakemeldingene, men ingen svar eller poeng for sp\u00f8rsm\u00e5lene.
+label.monitoring.noDisplayFeedbackOnly1  =Studentene er ikke i stand til \u00e5 se tilbakemeldinger p\u00e5 sp\u00f8rsm\u00e5l
+label.monitoring.noDisplayFeedbackOnly2  =Skal du tillate studentene til \u00e5 se tilbakemeldinger n\u00e5 ?
 
 
-#======= End labels: Exported 217 labels for no NO =====
+#======= End labels: Exported 222 labels for no NO =====
