--- a/lams_tool_laqa/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = qa
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Nov 09 20:36:08 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:49:33 CST 2018 
  
 #=================== labels for Q&A =================# 
 
@@ -15,8 +15,8 @@ label.tool.shortname  =Preguntas y Respuestas
 label.authoring  =Creaci\u00f3n de Preguntas
 label.monitoring  =Preguntas y Respuestas Seguimiento
 label.authoring.qa  =Preguntas y Respuestas Edici\u00f3n
-label.basic  =B\u00e1sico
-label.advanced  =Avanzado
+label.basic  =Contenido
+label.advanced  =Configuraci\u00f3n
 label.authoring.title  =T\u00edtulo
 label.authoring.instructions  =Instrucciones
 label.summary  =Sumario
@@ -29,9 +29,9 @@ label.monitoringReport.title  =T\u00edtulo del Reporte de Seguimiento
 link.view  =Ver
 link.download  =Descargar
 link.delete  =Borrar
-button.basic  =B\u00e1sico
+button.basic  =Contenido
 button.preview  =Inspecci\u00f3n Previa
-button.advanced  =Avanzado
+button.advanced  =Configuraci\u00f3n
 button.done  =Listo
 tool.icon.name  =Preguntas y Respuesas
 button.submitAllContent  =Enviar
