--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = shareresources
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:22:56 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:50:52 CST 2018 
  
 #=================== labels for ShareResources =================# 
 
@@ -14,8 +14,8 @@ tool.description  =Herramienta para compartir recursos
 appName  =Compartir recursos
 label.authoring.heading  =Compartir recursos Edici\u00f3n
 label.author.title  =Crear recursos para compartir
-label.authoring.heading.basic  =B\u00e1sico
-label.authoring.heading.advance  =Avanzado
+label.authoring.heading.basic  =Contenido
+label.authoring.heading.advance  =Configuraci\u00f3n
 label.authoring.heading.basic.desc  =Informaci\u00f3n b\u00e1sica para compartir recursos
 label.authoring.heading.advance.desc  =Por favor introduzca las opciones avanzadas para compartir recursos
 label.authoring.basic.title  =T\u00edtulo
