--- a/lams_tool_leader/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = leader
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:44:55 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 05:00:46 CST 2018 
  
 #=================== labels for Leader selection =================# 
 
@@ -13,7 +13,7 @@ activity.title  =Selecci\u00f3n de L\u00edder
 activity.description  =Herramienta de selecci\u00f3n de l\u00edder
 activity.helptext  =Selecci\u00f3n de l\u00edder
 pageTitle.authoring  =Selecci\u00f3n de l\u00edder Autor\u00eda
-button.basic  =B\u00e1sico
+button.basic  =Contenido
 label.authoring.basic.title  =T\u00edtulo:
 label.authoring.basic.instructions  =Instrucciones:
 message.unsavedChanges  =La p\u00e1gina contiene cambios no guardados
