--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = mindmap
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Dec 12 09:36:54 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:58:13 CST 2018 
  
 #=================== labels for Mindmap =================# 
 
@@ -13,8 +13,8 @@ tool.description  =Lluvia de ideas
 activity.title  =Lluvia de ideas
 activity.description  =Lluvia de ideas
 pageTitle.authoring  =Mindmap Autor\u00eda
-button.basic  =B\u00e1sico
-button.advanced  =Avanzado
+button.basic  =Contenido
+button.advanced  =Configuraci\u00f3n
 label.authoring.basic.title  =T\u00edtulo:
 label.authoring.basic.content  =Contenido:
 advanced.reflectOnActivity  =Agregar anotador al finalizar
