--- a/lams_tool_nb/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_nb/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = noticeboard
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 04:36:03 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:49:08 CST 2018 
  
 #=================== labels for Noticeboard =================# 
 
@@ -11,8 +11,8 @@ activity.description  =Herramienta para anuncios en formato HTML que puede conte
 activity.helptext  =Cartelera que muestra texto modelado, enlaces, imagenes, etc.
 tool.display.name  =Herramienta Cartelera
 tool.description  =Herramienta que permite mostrar una Cartelera
-label.authoring.heading.basic  =B\u00e1sico
-label.authoring.heading.advanced  =Avanzado
+label.authoring.heading.basic  =Contenido
+label.authoring.heading.advanced  =Configuraci\u00f3n
 basic.title  =T\u00edtulo
 basic.content  =Contenido
 label.filename  =Nombre de Archivo
