--- a/lams_tool_notebook/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_notebook/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = notebook
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:52:34 CST 2018 
  
 #=================== labels for Notebook =================# 
 
@@ -12,8 +12,8 @@ activity.title  =Anotador
 activity.description  =Actividad de anotador
 activity.helptext  =Anotador para notas y reflexiones
 pageTitle.authoring  =Crear Anotador
-button.basic  =B\u00e1sico
-button.advanced  =Avanzado
+button.basic  =Contenido
+button.advanced  =Configuraci\u00f3n
 label.authoring.basic.title  =T\u00edtulo
 label.authoring.basic.content  =Contenido:
 label.authoring.basic.instructions  =Instrucciones:
@@ -33,7 +33,6 @@ titleHeading.summary  =Resumen
 titleHeading.instructions  =Instrucciones
 titleHeading.statistics  =Estad\u00edsticas
 titleHeading.editActivity  =Editar Actividad
-titleHeading.exportPortfolio  =Exportar Portfolio
 heading.group  =Grupo {0}:
 heading.totalLearners  =N\u00famero de Estudiantes:
 heading.totalLearnersInGroup  =N\u00famero total de estudiantes en grupo:
@@ -109,7 +108,7 @@ button.submit  =Finalizar
 message.monitoring.summary.no.session  =No hay sesiones disponibles
 label.notify.learner  =Enviar email con comentario al estudiante
 event.teacher.comment.subject  =El instructor ha dejado un comentario.
-event.teacher.comment.body  =Comentario: {0}
+event.teacher.comment.body  =Comentario:  {0}
 label.click.to.edit  =Editar
 label.notebook.entries  =Anotaciones
 label.user.name  =Nombre
@@ -118,6 +117,12 @@ label.no.entry  =Sin anotaciones
 label.yes  =Si
 label.no  =No
 label.reply.comment  =Comentario del instructor
+message.session.name  =Grupo
+label.editing.options  =Opciones de edici\u00f3n
+label.activity.completion  =Al finalizar actividad
+basic.forceResponse  =Se requiere respuesta?
+message.learner.blank.alertforceResponse  =La respuesta es requerida
+advanced.enable.anonymous.posts  =Habilitar mensajes an\u00f3nimos
 
 
-#======= End labels: Exported 112 labels for es ES =====
+#======= End labels: Exported 117 labels for es ES =====
