--- a/lams_tool_pixlr/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_pixlr/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = pixlr
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 19:41:03 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:56:06 CST 2018 
  
 #=================== labels for Pixlr Tool =================# 
 
@@ -14,8 +14,8 @@ tool.description  =Herramienta para dibujo Pixlr
 activity.title  =Pixlr
 activity.description  =Herramienta para dibujo Pixlr
 pageTitle.authoring  =Autoria Pixlr
-button.basic  =B\u00e1sico
-button.advanced  =Avanzado
+button.basic  =Contenido
+button.advanced  =Configuraci\u00f3n
 label.authoring.basic.title  =T\u00edtulo
 label.authoring.basic.content  =Contenido
 advanced.lockOnFinished  =No permitir modificaciones una vez terminado
@@ -104,6 +104,8 @@ button.submit  =Finalizar
 message.no.reflection.available  =No hay reflexiones
 label.image.options  =Opciones
 label.activity.completion  =Al finalizar actividad
+errors.maxfilesize  =El archivo subido excedi\u00f3 el tama\u00f1o m\u00e1ximo de {0}
+label.upload.info  =El archivo cargado no debe ser ejecutable y no debe exceder el tama\u00f1o de {0}
 
 
-#======= End labels: Exported 98 labels for es ES =====
+#======= End labels: Exported 100 labels for es ES =====
