--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,13 +2,13 @@ appName = submitfiles
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:33:02 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:50:32 CST 2018 
  
 #=================== labels for Submit Files =================# 
 
 activity.title  =Enviar Archivos
-activity.description  =Actividad que permite a estudiantes enviar archivos con tareas o entregas al profesor, el cual puede marcar y dar una puntuaci\u00f3n de evaluaci\u00f3n. El profesor tambi\u00e9n puede exportar estas evaluaciones en formato de plantilla de Excel
-activity.helptext  =Actividad que permite a estudiantes enviar archivos con tareas o entregas al profesor, el cual puede marcar y dar una puntuaci\u00f3n de evaluaci\u00f3n. El profesor tambi\u00e9n puede exportar estas evaluaciones en formato de plantilla de Excel
+activity.description  =Actividad que permite a estudiantes enviar archivos con tareas o entregas al profesor, el cual puede marcar y dar un puntaje de evaluaci\u00f3n. El profesor tambi\u00e9n puede exportar estas evaluaciones en formato de plantilla de Excel
+activity.helptext  =Actividad que permite a estudiantes enviar archivos con tareas o entregas al profesor, el cual puede marcar y dar un puntaje de evaluaci\u00f3n. El profesor tambi\u00e9n puede exportar estas evaluaciones en formato de plantilla de Excel
 tool.display.name  =Herramienta de Env\u00edo de Archivos
 tool.description  =Herramienta que permite a estudiantes enviar archivos con tareas o entregas al profesor
 label.view  =Ver
@@ -16,9 +16,9 @@ label.download  =Descargar
 label.save  =Guardar
 label.cancel  =Cancelar
 label.authoring.heading  =Enviar Archivos Edici\u00f3n
-label.authoring.heading.basic  =B\u00e1sico
+label.authoring.heading.basic  =Contenido
 label.authoring.heading.basic.desc  =Informaci\u00f3n B\u00e1sica
-label.authoring.heading.advance  =Avanzado
+label.authoring.heading.advance  =Configuraci\u00f3n
 label.authoring.heading.advance.desc  =Ingrese las opciones avanzadas
 label.authoring.basic.title  =T\u00edtulo
 label.authoring.basic.instruction  =Instrucciones
@@ -54,7 +54,7 @@ page.title.mark1.userlist  =Reporte de Evaluaci\u00f3n
 label.monitoring.needMarking  =Archivo(s) que necesitan evaluaci\u00f3n
 label.monitoring.done.button  =Cerrar
 label.monitoring.viewAllMarks.button  =Ver Todas las Evaluaciones
-label.monitoring.Mark.button  =Evaluaci\u00f3n
+label.monitoring.Mark.button  =Puntaje
 label.monitoring.releaseMarks.button  =Enviar Evaluaciones a los estudiantes
 label.monitoring.downloadMarks.button  =Descargar Evaluaciones
 label.monitoring.updateMarks.button  =Actualizar Evaluaciones
@@ -64,8 +64,8 @@ label.monitoring.edit.activity.edit  =Editar Actividad
 label.monitoring.edit.activity.cancel  =Cancelar Edici\u00f3n
 label.monitoring.edit.activity.update  =Actualizar Actividad
 monitoring.statistic.title  =Estad\u00edsticas de Seguimiento
-monitoring.statistic.marked  =Archivos Evaluados
-monitoring.statistic.not.marked  =Archivos sin Evaluaci\u00f3n
+monitoring.statistic.marked  =Archivos evaluados
+monitoring.statistic.not.marked  =Archivos sin evaluaci\u00f3n
 monitoring.statistic.total.uploaded.file  =Total de Archivos Enviados
 monitoring.download.error  =Ha ocurrido un error en el proceso de descarga: {0}
 submit.upload.twice  =El Archivo que desea enviar ya ha sido enviado, por favor, sea paciente
@@ -119,7 +119,7 @@ event.mark.release.mark  =Archivo "{0}" enviado el {1}, la calificaci\u00f3n es 
 label.authoring.advanced.notify.onfilesubmit  =Notifique a los tutores cuando el estudiante haya enviado un archivo
 event.file.submit.subject  =LAMS: un estudiante ha enviado un archivo
 event.file.submit.body  =El estudiante {0} ha enviado un archivo.\n\nEste mensaje ha sido autom\u00e1ticamente siguiendo la configuraci\u00f3n seleccionada.
-label.monitor.mark.markedFile  =Archivo Evaluado
+label.monitor.mark.markedFile  =Archivo evaluado
 label.monitor.mark.updoad  =Subir archivo evaluado
 label.monitor.mark.replaceFile  =Remplazar
 label.monitor.mark.notifyStudent  =Notificar a estudiante
