--- a/lams_tool_spreadsheet/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_spreadsheet/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = spreadsheet
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 19:20:56 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:55:21 CST 2018 
  
 #=================== labels for Online Spreadsheet =================# 
 
@@ -13,7 +13,7 @@ tool.display.name  =Hoja de C\u00e1lculo
 tool.description  =Herramienta que permite usar una hoja de c\u00e1lculo en linea.
 label.authoring.heading  =Hoja de C\u00e1lculo Edici\u00f3n
 label.authoring.title  =Hoja de C\u00e1lculo
-label.authoring.heading.basic  =B\u00e1sico
+label.authoring.heading.basic  =Contenido
 label.authoring.heading.basic.desc  =Informaci\u00f3n b\u00e1sica de la hoja de c\u00e1lculo
 label.authoring.heading.advance.desc  =Ingrese informaci\u00f3n avanzada
 label.authoring.basic.resource.instructions  =Instrucciones
@@ -81,7 +81,6 @@ monitoring.tab.statistics  =Estadisticas
 monitoring.tab.edit.activity  =Editar Actividad
 monitoring.label.group  =Grupos
 monitoring.summary.note  =Atenci\u00f3n: el n\u00famero de estudiantes significa la cantidad de estos que han visto la hoja de c\u00e1lculo.
-message.monitoring.edit.activity.not.editable  =Esta actividad ya no se puede editar
 label.delete  =Borrar
 label.view  =Ver
 label.edit  =Editar
@@ -96,7 +95,7 @@ title.reflection  =Reflexi\u00f3n
 activity.title  =Hoja de C\u00e1lculo
 label.authoring.save.button  =Guardar
 label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez terminado
-label.authoring.heading.advance  =Avanzado
+label.authoring.heading.advance  =Configuraci\u00f3n
 label.up  =Hacia arriba
 label.down  =Hacia abajo
 label.continue  =Continuar
@@ -118,4 +117,4 @@ label.spreadsheet.options  =Opciones
 label.activity.completion  =Al finalizar actividad
 
 
-#======= End labels: Exported 110 labels for es ES =====
+#======= End labels: Exported 109 labels for es ES =====
