--- a/lams_tool_survey/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_survey/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = survey
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:53:09 CST 2018 
  
 #=================== labels for Survey =================# 
 
@@ -16,8 +16,8 @@ errorPage.title  =Error
 errorPage.heading  =Han ocurrido errores al procesar su requerimiento
 label.authoring.heading  =Encuestas Edici\u00f3n
 label.author.title  =Encuestas
-label.authoring.heading.basic  =B\u00e1sico
-label.authoring.heading.advance  =Avanzado
+label.authoring.heading.basic  =Contenido
+label.authoring.heading.advance  =Configuraci\u00f3n
 label.authoring.heading.basic.desc  =Contenido b\u00e1sico
 label.authoring.heading.advance.desc  =Modifique opciones de la encuesta
 label.authoring.basic.title  =T\u00edtulo
@@ -54,11 +54,6 @@ label.next  =Siguente
 label.previous  =Anterior
 label.of  =de
 error.upload.failed  =El archivo {0} no ha podido subirse.
-error.msg.upload.file.not.found  =No se a podido encontrar el archivo {0}.
-error.msg.file.not.found  =Error de sistema: El archivo no se ha almacenado.
-error.msg.io.exception  =Error de sistema: Problema de input/output al subir el archivo
-error.msg.invaid.param.upload  =Parametro invalido al tratar de subir el archivo.
-error.msg.repository  =Error en el sistema de repositorio de archivos cuando se ha tratado de almacenar el archivo.
 error.msg.default.content.not.find  =No se ha podido obtener el contenido de defecto para esta actividad
 error.mandatory.question  =Esta pregunta require respuesta.
 msg.no.instruction  =No hay instrucciones disponibles
@@ -79,10 +74,7 @@ monitoring.label.user.name  =Nombre
 label.monitoring.edit.activity.cancel  =Cancelar
 label.monitoring.edit.activity.update  =Actualizar
 label.monitoring.edit.activity.edit  =Editar
-message.monitoring.edit.activity.not.editable  =Esta actividad ya no se puede editar
 export.label.survey  =Encuestas
-error.inputFileTooLarge  =El archivo que ha tratado de subir es demasiado grande
-error.uploading  =Error al subir archivo
 error.title.empty  =El t\u00edtulo no puede dejarse en blanco
 label.open  =Abrir
 label.delete  =Borrar
@@ -187,6 +179,11 @@ label.total.responses  =N\u00famero de respuestas hasta ahora: {0}
 message.no.reflection.available  =No hay reflexi\u00f3n disponible.
 label.search  =Buscar...
 label.answer.required  =Respuesta requerida.
+label.survey.options  =Opciones
+label.activity.completion  =Al finalizar actividad
+label.notifications  =Notificaciones
+label.summary.downloaded=  =Informe descargado
+label.timestamp  =Fecha y hora
 
 
-#======= End labels: Exported 181 labels for es ES =====
+#======= End labels: Exported 178 labels for es ES =====
