--- a/lams_tool_task/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_task/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = takslist
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:54:11 CST 2018 
  
 #=================== labels for Task List =================# 
 
@@ -16,10 +16,10 @@ errorPage.title  =Error en la p\u00e1gina
 errorPage.heading  =Han occurrido errores
 label.authoring.heading  =Lista de Tareas Edici\u00f3n
 label.authoring.title  =Lista de Tareas
-label.authoring.heading.basic  =B\u00e1sico
+label.authoring.heading.basic  =Contenido
 label.authoring.heading.basic.desc  =Informaci\u00f3n b\u00e1sica sobre la lista de tareas
 label.authoring.heading.conditions  =Condiciones
-label.authoring.heading.advance  =Avanzado
+label.authoring.heading.advance  =Configuraci\u00f3n
 label.authoring.heading.advance.desc  =Ingrese opciones avanzadas
 label.authoring.basic.title  =T\u00edtulo
 label.authoring.basic.description  =Descripci\u00f3n
@@ -121,8 +121,6 @@ label.monitoring.tasksummary.comments.allowed  =Estudiantes pueden a\u00f1adir c
 label.monitoring.tasksummary.comments.required  =Se deben a\u00f1adir comentarios para finalizar esta actividad
 label.monitoring.tasksummary.files.allowed  =Estudiantes pueden a\u00f1adir archivos
 label.monitoring.tasksummary.files.required  =Se deben a\u00f1adir archivos para finalizar actividad
-message.monitoring.edit.activity.not.editable  =Esta actividad no se puede editar
-export.title  =Export Portfolio Lista de Tareas
 label.export.reflection  =Reflexiones
 label.view  =Ver
 label.edit  =Editar
@@ -165,6 +163,12 @@ monitor.summary.date.restriction.set  =Restricci\u00f3n de fecha activada
 monitor.summary.date.restriction.removed  =Restricci\u00f3n de fecha desactivada
 label.submit  =Finalizar
 label.download  =Descargar
+label.confirm  =Confirmar
+label.task.options  =Opciones
+label.activity.completion  =Al finalizar actividad
+errors.maxfilesize  =El archivo enviado excede el m\u00e1ximo tama\u00f1o permitido de {0} bytes.
+error.attachment.executable  =El archivo cargado es ejecutable
+label.upload.info  =El archivo cargado no debe ser ejecutable y no debe exceder el tama\u00f1o de {0}
 
 
-#======= End labels: Exported 159 labels for es ES =====
+#======= End labels: Exported 163 labels for es ES =====
