--- a/lams_tool_vote/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_vote/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = voting
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 17:30:09 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:52:03 CST 2018 
  
 #=================== labels for Voting =================# 
 
@@ -13,8 +13,8 @@ tool.display.name  =Votaci\u00f3n
 tool.description  =Herramienta para que los estudiantes voten por distintos candidatos propuestos por el instructor y/o voto abierto
 label.tool.shortname  =Votaci\u00f3n
 label.authoring.vote  =Votaci\u00f3n Edici\u00f3n
-label.basic  =B\u00e1sico
-label.advanced  =Avanzado
+label.basic  =Contenido
+label.advanced  =Configuraci\u00f3n
 label.summary  =Resumen
 label.stats  =Estad\u00edsticas
 label.editActivity  =Editar Actividad
@@ -39,7 +39,7 @@ label.learning.report  =Reporte de Estudiantes
 label.view  =Ver
 button.cancel  =Cancelar
 button.preview  =Vista previa
-button.advanced  =Advanzado
+button.advanced  =Configuraci\u00f3n
 button.instructions  =Instrucciones
 button.add  =A\u00f1adir
 button.remove  =Borrar
@@ -160,6 +160,7 @@ label.voting.options  =Opciones
 label.activity.completion  =Al finalizar actividad
 js.error.validate.number  =Hay un error con el n\u00famero m\u00ednimo y/o m\u00e1ximo de votos. Por favor verifique y haga los cambios necesarios.
 label.search  =Buscar...
+message.monitoring.edit.activity.warning  =Advertencia: si edita y modifica una nominaci\u00f3n que ya ha sido seleccionada, se restablecer\u00e1 a cero, debido a que la nominaci\u00f3n haya cambiado.
 
 
-#======= End labels: Exported 154 labels for es ES =====
+#======= End labels: Exported 155 labels for es ES =====
