--- a/lams_gradebook/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:58:17 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:57:10 CST 2018 
  
 #=================== labels for Gradebook =================# 
 
@@ -106,8 +106,8 @@ gradebook.export.excel  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u0392\u03b1
 label.select.lessons.to.export  =\u0395\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5 \u03c4\u03b1 \u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03b1 \u03b3\u03b9\u03b1 \u03c4\u03b7\u03bd \u03b5\u03be\u03b1\u03b3\u03c9\u03b3\u03ae
 label.marks  =\u0392\u03b1\u03b8\u03bc\u03bf\u03af
 label.number.learners.in.mark.range  =\u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u03bc\u03b1\u03b8\u03b7\u03c4\u03ce\u03bd \u03c3\u03c4\u03bf \u03b5\u03cd\u03c1\u03bf\u03c2 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1\u03c2
-label.show.marks.chart  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03b4\u03b9\u03b1\u03b3\u03c1\u03ac\u03bc\u03bc\u03b1\u03c4\u03bf\u03c2 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03b9\u03ce\u03bd
-label.hide.marks.chart  =\u0391\u03c0\u03cc\u03ba\u03c1\u03c5\u03c8\u03b7 \u03b4\u03b9\u03b1\u03b3\u03c1\u03ac\u03bc\u03bc\u03b1\u03c4\u03bf\u03c2 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03b9\u03ce\u03bd
+label.show.marks.chart  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03ba\u03b1\u03c4\u03b1\u03bd\u03bf\u03bc\u03ae\u03c2 \u03b2\u03b1\u03b8\u03bc\u03ce\u03bd
+label.hide.marks.chart  =\u0391\u03c0\u03cc\u03ba\u03c1\u03c5\u03c8\u03b7 \u03b4\u03b9\u03b1\u03b3\u03c1\u03ac\u03bc\u03bc\u03b1\u03c4\u03bf\u03c2 \u03ba\u03b1\u03c4\u03b1\u03bd\u03bf\u03bc\u03ae\u03c2 \u03b2\u03b1\u03b8\u03bc\u03ce\u03bd
 gradebook.summary.activity.marks  =\u03a3\u03cd\u03bd\u03bf\u03c8\u03b7 \u03c4\u03c9\u03bd \u03b2\u03b1\u03b8\u03bc\u03ce\u03bd \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 label.simplified.export  =\u0391\u03c0\u03bb\u03bf\u03c0\u03bf\u03b9\u03b7\u03bc\u03ad\u03bd\u03b7 \u03b5\u03be\u03b1\u03b3\u03c9\u03b3\u03ae (\u03bc\u03cc\u03bd\u03bf \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b5\u03c2)
 label.button.show.weights  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03b2\u03b1\u03c1\u03ce\u03bd
