--- a/lams_learning/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = learner_java
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:41:59 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:51:13 CST 2018 
  
 #=================== labels for Learner (Java) =================# 
 
@@ -155,6 +155,33 @@ message.kumalive.report.load.error  =\u03a3\u03c6\u03ac\u03bb\u03bc\u03b1 \u03ba
 button.kumalive.ok  =\u0395\u03bd\u03c4\u03ac\u03be\u03b5\u03b9
 button.kumalive.report.export.all  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03cc\u03bb\u03c9\u03bd
 button.kumalive.report.export.selected  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03b5\u03c0\u03b9\u03bb\u03b5\u03b3\u03bc\u03ad\u03bd\u03c9\u03bd
+button.kumalive.poll  =\u03a8\u03b7\u03c6\u03bf\u03c6\u03bf\u03c1\u03af\u03b1
+button.kumalive.poll.create  =\u0394\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03af\u03b1 \u03a8\u03b7\u03c6\u03bf\u03c6\u03bf\u03c1\u03af\u03b1\u03c2
+label.kumalive.poll.question  =\u0395\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7 (\u03c0\u03c1\u03bf\u03b1\u03b9\u03c1\u03b5\u03c4\u03b9\u03ba\u03ae)
+label.kumalive.poll.question.tip  =\u03b3\u03b9\u03b1 \u03c0\u03b1\u03c1\u03ac\u03b4\u03b5\u03b9\u03b3\u03bc\u03b1: \u0393\u03b9\u03b1\u03c4\u03af \u03b5\u03af\u03bd\u03b1\u03b9 \u03bf \u03bf\u03c5\u03c1\u03b1\u03bd\u03cc\u03c2 \u03b5\u03af\u03bd\u03b1\u03b9 \u03bc\u03c0\u03bb\u03b5;
+label.kumalive.poll.answer  =\u0391\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2
+label.kumalive.poll.answer.true  =\u0391\u03bb\u03b7\u03b8\u03ad\u03c2
+label.kumalive.poll.answer.false  =\u03a8\u03b5\u03c5\u03b4\u03ad\u03c2
+label.kumalive.poll.answer.positive  =\u0398\u03b5\u03c4\u03b9\u03ba\u03cc
+label.kumalive.poll.answer.negative  =\u0391\u03c1\u03bd\u03b7\u03c4\u03b9\u03ba\u03cc
+label.kumalive.poll.answer.yes  =\u039d\u03b1\u03af
+label.kumalive.poll.answer.no  =\u039f\u03c7\u03b9
+label.kumalive.poll.answer.custom  =\u03a0\u03c1\u03bf\u03c3\u03b1\u03c1\u03bc\u03bf\u03c3\u03bc\u03ad\u03bd\u03b7...
+label.kumalive.poll.answer.custom.tip  ={\u0398\u03ad\u03c3\u03b5} {\u03ba\u03ac\u03b8\u03b5} {\u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7} {\u03c3\u03b5} {\u03ac\u03b3\u03b3\u03b9\u03c3\u03c4\u03c1\u03b1} {\u03c0\u03b1\u03c1\u03b5\u03bd\u03b8\u03ad\u03c3\u03b5\u03b9\u03c2}
+label.kumalive.poll.answer.custom.error.syntax  =\u0397 \u03c3\u03cd\u03bd\u03c4\u03b1\u03be\u03b7 \u03c4\u03b7\u03c2 \u03c0\u03c1\u03bf\u03c3\u03b1\u03c1\u03bc\u03bf\u03c3\u03bc\u03ad\u03bd\u03b7\u03c2 \u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7\u03c2 \u03b5\u03af\u03bd\u03b1\u03b9 \u03b5\u03c3\u03c6\u03b1\u03bb\u03bc\u03ad\u03bd\u03b7. \u03a0\u03b1\u03c1\u03ac\u03b4\u03b5\u03b9\u03b3\u03bc\u03b1: {\u03c0\u03c1\u03ce\u03c4\u03b7 \u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7} {\u03b4\u03b5\u03cd\u03c4\u03b5\u03c1\u03b7 \u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7}
+label.kumalive.poll.answer.custom.error.count  =\u0395\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03bf\u03bd\u03c4\u03b1\u03b9 \u03ad\u03c9\u03c2 \u03ba\u03b1\u03b9 9 \u03b1\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2
+button.kumalive.poll.start  =\u03a1\u03c9\u03c4\u03ae\u03c3\u03c4\u03b5 \u03c4\u03ce\u03c1\u03b1!
+button.kumalive.poll.vote  =\u03a8\u03ae\u03c6\u03bf\u03c2
+button.kumalive.poll.finish  =\u039f\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03b7 \u03a8\u03b7\u03c6\u03bf\u03c6\u03bf\u03c1\u03af\u03b1\u03c2
+message.kumalive.poll.finish.confirm  =\u0395\u03af\u03c3\u03c4\u03b5 \u03b2\u03ad\u03b2\u03b1\u03b9\u03bf\u03b9 \u03cc\u03c4\u03b9 \u03b8\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03ba\u03bb\u03b5\u03af\u03c3\u03b5\u03c4\u03b5 \u03b1\u03c5\u03c4\u03ae\u03bd \u03c4\u03b7\u03bd \u03c8\u03b7\u03c6\u03bf\u03c6\u03bf\u03c1\u03af\u03b1 \u03ba\u03b1\u03b9 \u03bd\u03b1 \u03bc\u03b7\u03bd \u03ad\u03c7\u03bf\u03c5\u03bd \u03c4\u03b7 \u03b4\u03c5\u03bd\u03b1\u03c4\u03cc\u03c4\u03b7\u03b1 \u03ac\u03bb\u03bb\u03bf\u03b9 \u03bd\u03b1 \u03c8\u03b7\u03c6\u03af\u03c3\u03bf\u03c5\u03bd;
+button.kumalive.poll.close  =\u039a\u03bb\u03b5\u03af\u03c3\u03b9\u03bc\u03bf \u03a8\u03b7\u03c6\u03bf\u03c6\u03bf\u03c1\u03af\u03b1\u03c2
+button.kumalive.poll.release.votes  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u03c8\u03ae\u03c6\u03bf\u03c5\u03c2 \u03c3\u03c4\u03bf\u03c5\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5\u03c2
+message.kumalive.poll.release.votes.confirm  =\u0395\u03af\u03c3\u03c4\u03b5 \u03b2\u03ad\u03b2\u03b1\u03b9\u03bf\u03b9 \u03cc\u03c4\u03b9 \u03b8\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03b4\u03b5\u03af\u03be\u03b5\u03c4\u03b5 \u03b1\u03c0\u03bf\u03c4\u03b5\u03bb\u03ad\u03c3\u03bc\u03b1\u03c4\u03b1 \u03c4\u03b7\u03c2 \u03c8\u03b7\u03c6\u03bf\u03c6\u03bf\u03c1\u03af\u03b1\u03c2 \u03c3\u03c4\u03bf\u03c5\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5\u03c2 \u03c0\u03bf\u03c5 \u03c8\u03ae\u03c6\u03b9\u03c3\u03b1\u03bd;
+button.kumalive.poll.release.voters  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03c8\u03ae\u03c6\u03c9\u03bd \u03ba\u03b1\u03b9 \u03c8\u03b7\u03c6\u03bf\u03c6\u03cc\u03c1\u03c9\u03bd \u03c3\u03c4\u03bf\u03c5\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5\u03c2
+message.kumalive.poll.release.voters.confirm  =\u0395\u03af\u03c3\u03c4\u03b5 \u03b2\u03ad\u03b2\u03b1\u03b9\u03bf\u03b9 \u03cc\u03c4\u03b9 \u03b8\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03c0\u03b1\u03c1\u03bf\u03c5\u03c3\u03b9\u03ac\u03c3\u03b5\u03c4\u03b5 \u03c4\u03b1 \u03b1\u03c0\u03bf\u03c4\u03b5\u03bb\u03ad\u03c3\u03bc\u03b1\u03c4\u03b1 \u03c4\u03c9\u03bd \u03c8\u03b7\u03c6\u03bf\u03c6\u03bf\u03c1\u03b9\u03ce\u03bd \u03ba\u03b1\u03b9 \u03c4\u03b1 \u03bf\u03bd\u03cc\u03bc\u03b1\u03c4\u03b1 \u03c4\u03c9\u03bd \u03c8\u03b7\u03c6\u03bf\u03c6\u03cc\u03c1\u03c9\u03bd \u03c3\u03c4\u03bf\u03c5\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5\u03c2;
+label.kumalive.poll.missing.voters  =\u0394\u03b5\u03bd \u03c8\u03b7\u03c6\u03af\u03c3\u03c4\u03b7\u03ba\u03b5
+label.kumalive.poll.results  =\u0391\u03c0\u03bf\u03c4\u03b5\u03bb\u03ad\u03c3\u03bc\u03b1\u03c4\u03b1
+label.kumalive.poll.votes.total  =\u03a3\u03cd\u03bd\u03bf\u03bb\u03bf \u03c8\u03ae\u03c6\u03c9\u03bd
 
 
-#======= End labels: Exported 149 labels for el GR =====
+#======= End labels: Exported 176 labels for el GR =====
