--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed May 16 15:37:59 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:57:47 CST 2018 
  
 #=================== labels for Assessment =================# 
 
@@ -149,7 +149,7 @@ label.monitoring.edit.activity.edit  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3
 label.monitoring.summary.summary  =\u03a0\u03b5\u03c1\u03af\u03bb\u03b7\u03c8\u03b7
 label.monitoring.summary.double.click  =\u039a\u03ac\u03bd\u03c4\u03b5 \u03b4\u03b9\u03c0\u03bb\u03cc \u03ba\u03bb\u03b9\u03ba \u03c3\u03c4\u03bf \u03cc\u03bd\u03bf\u03bc\u03b1 \u03c4\u03bf\u03c5 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5 \u03b3\u03b9\u03b1 \u03bd\u03b1 \u03bb\u03ac\u03b2\u03b5\u03c4\u03b5 \u03c4\u03b7\u03bd \u03c0\u03bb\u03ae\u03c1\u03b7 \u03b1\u03c4\u03bf\u03bc\u03b9\u03ba\u03ae \u03c4\u03bf\u03c5 \u03b1\u03bd\u03b1\u03c6\u03bf\u03c1\u03ac.
 label.monitoring.summary.report.by.question  =\u0391\u03bd\u03b1\u03c6\u03bf\u03c1\u03ac \u03b1\u03bd\u03ac \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7
-label.monitoring.summary.export.summary  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03c0\u03b5\u03c1\u03af\u03bb\u03b7\u03c8\u03b7\u03c2
+label.monitoring.summary.export.summary  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03c0\u03b5\u03c1\u03af\u03bb\u03b7\u03c8\u03b7\u03c2/\u03b1\u03c0\u03bf\u03c4\u03b5\u03bb\u03b5\u03c3\u03bc\u03ac\u03c4\u03c9\u03bd
 label.monitoring.summary.results.question  =\u0391\u03bd\u03b1\u03bb\u03c5\u03c4\u03b9\u03ba\u03ac \u03b1\u03c0\u03bf\u03c4\u03b5\u03bb\u03ad\u03c3\u03bc\u03b1\u03c4\u03b1 \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7\u03c2
 label.monitoring.summary.choose  =\u0395\u03c0\u03ad\u03bb\u03b5\u03be\u03b5 ...
 label.monitoring.summary.user.name  =\u038c\u03bd\u03bf\u03bc\u03b1
@@ -201,7 +201,7 @@ event.learner.completes.attempt.subject  =LAMS: \u0397 \u03c0\u03c1\u03bf\u03c3\
 event.learner.completes.attempt.body  =\u039f \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c2 {0} \u03ad\u03c7\u03b5\u03b9 \u03bf\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03ce\u03c3\u03b5\u03b9 \u03c4\u03b7\u03bd \u03c0\u03c1\u03bf\u03c3\u03c0\u03ac\u03b8\u03b5\u03b9\u03b1 \u03c4\u03bf\u03c5 \u03c3\u03c4\u03bf \u03b5\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf \u03b1\u03be\u03b9\u03bf\u03bb\u03cc\u03b3\u03b7\u03c3\u03b7\u03c2.\n\n \u0391\u03c5\u03c4\u03cc \u03c4\u03bf \u03bc\u03ae\u03bd\u03c5\u03bc\u03b1 \u03b1\u03c5\u03c4\u03cc \u03b1\u03c0\u03bf\u03c3\u03c4\u03ad\u03bb\u03bb\u03b5\u03b9 \u03b1\u03c5\u03c4\u03cc\u03bc\u03b1\u03c4\u03b1, \u03bc\u03b5 \u03b2\u03ac\u03c3\u03b7 \u03c4\u03b9\u03c2 \u03c0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03bc\u03ad\u03bd\u03b5\u03c2 \u03c1\u03c5\u03b8\u03bc\u03af\u03c3\u03b5\u03b9\u03c2.
 message.alertContentEdit  =\u03a3\u03b7\u03bc\u03b5\u03af\u03c9\u03c3\u03b7: \u0388\u03bd\u03b1\u03c2 \u03ae \u03c0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03bf\u03b9 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03b9 \u03ad\u03c7\u03bf\u03c5\u03bd \u03c0\u03c1\u03cc\u03c3\u03b2\u03b1\u03c3\u03b7 \u03c3\u03b5 \u03b1\u03c5\u03c4\u03ae \u03c4\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03ba\u03b1\u03b9 \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b1\u03bb\u03bb\u03ac\u03be\u03b5\u03b9\u03c0\u03bb\u03ad\u03bf\u03bd.
 warning.msg.authoring.do.you.want.to.delete  =\u0395\u03af\u03c3\u03c4\u03b5 \u03c3\u03af\u03b3\u03bf\u03c5\u03c1\u03bf\u03b9 \u03cc\u03c4\u03b9 \u03b8\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03b4\u03b9\u03b1\u03b3\u03c1\u03ac\u03c8\u03b5\u03c4\u03b5 \u03b1\u03c5\u03c4\u03ae \u03c4\u03b7\u03bd \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7;
-label.export.exported.on  =\u0395\u03be\u03b1\u03b3\u03cc\u03bc\u03b5\u03bd\u03bf \u03c3\u03b5:
+label.export.exported.on  =\u0397 \u03b5\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03ad\u03b3\u03b9\u03bd\u03b5:
 label.export.question.summary  =\u03a0\u03b5\u03c1\u03af\u03bb\u03b7\u03c8\u03b7 \u0395\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7\u03c2
 label.export.user.summary  =\u03a0\u03b5\u03c1\u03af\u03bb\u03b7\u03c8\u03b7 \u03a7\u03c1\u03ae\u03c3\u03c4\u03b7
 label.export.date.attempted  =\u0397\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03af\u03b1 \u0391\u03c0\u03cc\u03c0\u03b5\u03b9\u03c1\u03b1\u03c2
@@ -337,6 +337,7 @@ label.disclose.correct.answers  =\u0391\u03c0\u03bf\u03ba\u03ac\u03bb\u03c5\u03c
 label.disclose.groups.answers  =\u0391\u03c0\u03bf\u03ba\u03ac\u03bb\u03c5\u03c8\u03b7 \u03c4\u03c9\u03bd \u03b1\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd \u03c4\u03c9\u03bd \u03bf\u03bc\u03ac\u03b4\u03c9\u03bd
 label.disclose.all.correct.answers  =\u0391\u03bd\u03b1\u03ba\u03ac\u03bb\u03c5\u03c8\u03b7 \u03cc\u03bb\u03c9\u03bd \u03c4\u03c9\u03bd \u03c3\u03c9\u03c3\u03c4\u03ce\u03bd \u03b1\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b5\u03c9\u03bd
 label.disclose.all.groups.answers  =\u0391\u03c0\u03bf\u03ba\u03ac\u03bb\u03c5\u03c8\u03b7 \u03c4\u03c9\u03bd \u03b1\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd \u03cc\u03bb\u03c9\u03bd \u03c4\u03c9\u03bd \u03bf\u03bc\u03ac\u03b4\u03c9\u03bd
+label.prefix.sequential.letters.for.each.answer  =\u0395\u03b9\u03c3\u03b1\u03b3\u03c9\u03b3\u03ae \u03c0\u03c1\u03bf\u03b8\u03ad\u03bc\u03b1\u03c4\u03bf\u03c2 \u03b4\u03b9\u03b1\u03b4\u03bf\u03c7\u03b9\u03ba\u03ce\u03bd \u03b3\u03c1\u03b1\u03bc\u03bc\u03ac\u03c4\u03c9\u03bd \u03b3\u03b9\u03b1 \u03ba\u03ac\u03b8\u03b5 \u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7
 
 
-#======= End labels: Exported 331 labels for el GR =====
+#======= End labels: Exported 332 labels for el GR =====
