--- a/lams_tool_images/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = images
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Nov 17 11:47:58 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:56:23 CST 2018 
  
 #=================== labels for Image Gallery =================# 
 
@@ -12,11 +12,9 @@ label.authoring.basic.instruction  =Instrucciones
 activity.helptext  =Subiendo las im\u00e1genes para compartir.
 tool.display.name  =Galer\u00eda de Im\u00e1genes
 tool.description  =Herramienta para compartir im\u00e1genes
-errorPage.title  =Error en la p\u00e1gina
-errorPage.heading  =Ha ocurrido un error al procesar su informaci\u00f3n.
 label.authoring.heading  =Galer\u00eda de Imagenes Autor\u00eda
 label.author.title  =Galer\u00eda de Imagenes Autor\u00eda
-label.authoring.heading.basic  =B\u00e1sico
+label.authoring.heading.basic  =Contenido
 label.authoring.heading.basic.desc  =Contenido informativo b\u00e1sico para galer\u00eda
 label.authoring.heading.advance.desc  =Por favor, introduzca las instrucciones avanzadas para galer\u00eda
 label.authoring.basic.title  =T\u00edtulo
@@ -38,73 +36,46 @@ label.authoring.advance.allow.learner.comment.images  =Permitir a los estudiante
 label.authoring.advance.notify.monitoring.teachers  =Notificar a los intructores cuando una im\u00e1gen es agregada
 label.authoring.advance.allow.learner.ratings.or.vote  =Permitir Feedback
 label.authoring.advance.allow.learner.vote  =Permitir a los estudiantes seleccionar sus im\u00e1genes preferidas
-label.authoring.advance.allow.learner.rank  =Permitir puntuaci\u00f3n
+label.authoring.advance.allow.learner.rank  =Habilitar puntaje
 label.authoring.cancel.button  =Cancelar
 label.authoring.up  =Mover hacia arriba
 label.authoring.down  =Mover hacia abajo
 label.authoring.image  =Im\u00e1gen
-authoring.exception  =Ha ocurrido un problema en la p\u00e1gina de autor\u00eda. La raz\u00f3n es {0}
 authoring.msg.cancel.save  =sta seguro que desea cerrar sin guardar cambios?
 label.learning.add.new.image  =A\u00f1adir nueva imagen
 label.learning.title  =Galer\u00eda de Im\u00e1genes
 label.learning.heading  =Galer\u00eda de im\u00e1genes
 label.check.for.new  =Actualizar
-label.suggest.new  =Sugerir una nueva
-label.learning.ratings  =Puntuaci\u00f3n
-label.learning.average.rating  =Puntuaci\u00f3n promedio:
 label.learning.vote.here  =Seleccionar como favorita
 label.learning.unvote  =Remover como favorita
-label.learning.add.comment  =A\u00f1adir comentario
-label.learning.post  =Comentario
-label.learning.by  =Por
-label.learning.comments  =Com
 label.learning.added.by  =A\u00f1adido por:
-label.learning.open.original.size  =Abrir en tama\u00f1o original
 monitoring.tab.summary  =Sumario
 monitoring.tab.statistics  =Instrucciones
 monitoring.tab.edit.activity  =Editar Actividad
 monitoring.label.group  =Grupo
-monitoring.summary.note  =Atenci\u00f3n: n\u00famero de estudiantes corresponde al n\u00famero de estudiantes que han ingresado a la actividad.
 monitoring.label.title  =T\u00edtulo
 monitoring.label.suggest  =Sugerido por:
 monitoring.label.hide  =Esconder
 monitoring.label.show  =Mostrar
-monitoring.label.user.loginname  =Nombre de usuario
-monitoring.label.user.name  =Nombre
 label.monitoring.title  =Galer\u00eda de Im\u00e1genes
-label.monitoring.number.rated  =N\u00famero de puntos
-label.monitoring.average.rating  =Puntuaci\u00f3n promedio
+label.monitoring.average.rating  =Puntaje promedio
 label.monitoring.number.votes  =N\u00famero de favoritas
 label.monitoring.by  =Por
 label.monitoring.edit.activity.edit  =Editar
-label.monitoring.summary.overall.summary  =Sumario
 label.monitoring.summary.title.reflection  =Reflexi\u00f3n
 label.monitoring.summary.add.new.image  =A\u00f1adir nueva imagen
 label.monitoring.imagesummary.image.summary  =Sumario
 label.monitoring.imagesummary.save  =Guadar
 label.monitoring.imagesummary.user  =Estudiante
 label.monitoring.imagesummary.comments  =Comentarios
-label.monitoring.imagesummary.rating  =Puntuaci\u00f3n
 label.monitoring.imagesummary.voted.for.this.image  =Favoritos
 label.monitoring.imagesummary.image  =Im\u00e1gen
-label.monitoring.updatecomment.update.comment  =Actualizar comentario
-label.monitoring.updatecomment.comment  =Comentario
 label.monitoring.updatecomment.save  =Guardar
-label.monitoring.updatecomment.posted.by  =Enviado por
-label.monitoring.updatecomment.posted.on  =Enviado en
-label.export.uploaded.by  =Subida por
-label.export.voted.for.this.image  =Im\u00e1gen favorita
-label.export.images  =Im\u00e1genes
-message.monitoring.edit.activity.not.editable  =Esta actividad no est\u00e1 disponible
 output.desc.learner.number.of.images.uploaded  =N\u00famero de imagenes subidas por usuario
 output.desc.learner.number.of.comments  =N\u00famero de comentarios por usuario
 output.desc.learner.number.of.votes  =N\u00famero de imagenes seleccionadas como favoritas por usuario
-export.title  =Exportar portfolio de galer\u00eda de im\u00e1genes
-error.resource.item.desc.blank  =Comentarios/instrucciones no se puede dejar en blanco
-error.resource.item.title.blank  =T\u00edtulo no se puede dejar en blanco
 error.resource.image.not.alowed.format  =Los formatos permitidos son: gif, png, jpg
 error.resource.image.not.alowed.format.for  =Error al subir im\u00e1gen {0}. Los formatos permitidos son: gif, png, jpg
-error.resource.item.url.blank  =URL no se puede dejar en blanco
 error.resource.item.file.blank  =Archivo no se puede dejar en blanco.
 error.resource.image.comment.blank  =Comentario no se puede dejar en blanco
 error.upload.failed  =Al subir el archivo ha ocurrido un error: {0}
@@ -117,7 +88,6 @@ error.msg.number.format.exception  =Hay un error con la configuraci\u00f3n de es
 error.msg.invaid.param.upload  =Par\u00e1metro inv\u00e1lido al intentar subir el archivo.
 error.msg.default.content.not.find  =No se pudo recuperar el contenido por defecto de la herramienta.
 warning.msg.authoring.do.you.want.to.delete  =\u00bfEst\u00e1 seguro que desea borrar esta im\u00e1gen?
-warning.msg.monitoring.do.you.want.to.delete  =\u00bfEst\u00e1 seguro que desea eliminar este comentario?
 label.delete  =Borrar
 label.view  =Ver
 label.edit  =Editar
@@ -134,19 +104,16 @@ title.reflection  =Reflexi\u00f3n
 monitoring.user.reflection  =Reflexi\u00f3n
 activity.title  =Galer\u00eda de Im\u00e1genes
 label.authoring.save.button  =Guardar
-monitoring.label.access.time  =Tiempo de acceso
 label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez terminado
-label.authoring.heading.advance  =Avanzado
+label.authoring.heading.advance  =Configuraci\u00f3n
 label.continue  =Continuar
 monitoring.user.fullname  =Nombre
 button.close  =Cerrar
-label.monitoring.heading.access  =Lista de Estudiantes
 label.finished  =Finalizar
 label.finish  =Finalizado
 error.msg.repository  =A ocurrido un error en el repositorio al tratar de incluir un archivo.
 message.alertContentEdit  =Advertencia: Uno o mas estudiantes han accedido a esta actividad. Cambiar el contenido de la misma puede resultar en que los estudiantes reciban diferente informaci\u00f3n sobre esta actividad.
 message.activityLocked  =El instructor ha configurado esta actividad de manera que no permita subir m\u00e1s imagenes una vez finalizada.
-label.export.reflection  =Reflexiones
 message.warnLockOnFinish  =Atenci\u00f3n: una vez finalizada esta actividad no podr\u00e1 hacer cambios.
 label.on  =Si
 label.off  =No
@@ -161,16 +128,30 @@ admin.maximum.dimensions.thumbnail.image  =Dimensi\u00f3n m\u00e1xima de la im\u
 admin.success  =La configuraci\u00f3n ha sido guardada.
 admin.return  =Volver a Admnistraci\u00f3n de LAMS
 admin.button.save  =Guardar
-label.default.user.name  =Instructor
-event.imagesubmit.subject  =LAMS: Estudiante ha enviado una im\u00e1gen
 event.imagesubmit.body  =El estudiante {0} ha enviado una im\u00e1gen. \n\n Este mensaje se ha enviado autom\u00e1ticamente, de acuerdo a la configuraci\u00f3n de esta actividad.
-output.desc.uploaded.images.urls  =Galer\u00eda de Imagenes: imagenes subidas por estudiantes
 label.learning.delete.image  =Eliminar imagen
 label.submit  =Finalizar
 label.posted.by  ={0} el {1}
 label.image.options  =Opciones
 label.activity.completion  =Al finalizar actividad
 errors.maxfilesize  =La imagen excede el tama\u00f1o m\u00e1ximo permitido
+label.rating.criterias  =Criterios de calificaci\u00f3n
+label.add.criteria  =Agregar criterios
+label.rate.limits.reminder  =Limitaci\u00f3n de calificaci\u00f3n: M\u00ednimo {0} y M\u00e1ximo {1}.
+label.rate.limits.topic.reminder  =Ya ha calificado {0} im\u00e1genes.
+label.rate.limits.reminder.min  =Debe calificar al menos {0} im\u00e1genes.
+label.rate.limits.reminder.max  =Solo puede calificar hasta {0} im\u00e1genes.
+js.warning.max.min.limit  =Hay un error con el conjunto m\u00ednimo y / o m\u00e1ximo para las calificaciones. Por favor revisa e intenta de nuevo.
+label.minimum  =M\u00ednimo:
+label.maximum  =M\u00e1ximo:
+label.no.minimum  =Sin m\u00ednimo
+label.no.maximum  =Sin maximo
+label.minimum.number.words  =N\u00famero m\u00ednimo de palabras
+label.average.rating  =Calificaci\u00f3n promedio {0} / {1} votos
+label.your.rating  =Su calificaci\u00f3n {0}, calificaci\u00f3n promedio {1}/{2} votos
+label.comment.textarea.tip  =Escriba su comentario aqu\u00ed y luego haga clic en el tic verde
+warning.minimum.number.words  =Hay un n\u00famero m\u00ednimo requerido de palabras en un comentario {0}
+label.upload.info  =El archivo cargado no debe exceder el tama\u00f1o de {0}
 
 
-#======= End labels: Exported 165 labels for es ES =====
+#======= End labels: Exported 146 labels for es ES =====
