--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = mcq
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:12:47 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:48:45 CST 2018 
  
 #=================== labels for Multiple Choice Questions =================# 
 
@@ -145,7 +145,7 @@ label.displayAnswers  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u03c4\u03c9\u
 label.monitoring.yesDisplayAnswers  =\u039f\u03b9 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03b9 \u03b5\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03b5\u03c4\u03b1\u03b9 \u03bd\u03b1 \u03b2\u03bb\u03ad\u03c0\u03bf\u03c5\u03bd \u03c4\u03b9\u03c2 \u03b1\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2 \u03c3\u03b5 \u03cc\u03bb\u03b5\u03c2 \u03c4\u03b9\u03c2 \u03b5\u03c1\u03c9\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2
 label.monitoring.noDisplayAnswers1  =\u039f\u03b9 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03b9 \u03b4\u03b5\u03bd \u03b5\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03b5\u03c4\u03b1\u03b9 \u03bd\u03b1 \u03b2\u03bb\u03ad\u03c0\u03bf\u03c5\u03bd \u03c4\u03b9\u03c2 \u03b1\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2 \u03c3\u03b5 \u03cc\u03bb\u03b5\u03c2 \u03c4\u03b9\u03c2 \u03b5\u03c1\u03c9\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2
 label.monitoring.noDisplayAnswers2  =\u0398\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03b5\u03c0\u03b9\u03c4\u03c1\u03ad\u03c8\u03b5\u03c4\u03b5 \u03c3\u03c4\u03bf\u03c5\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5\u03c2  \u03bd\u03b1 \u03b4\u03bf\u03c5\u03bd \u03c4\u03b9\u03c2 \u03b1\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2 \u03c4\u03ce\u03c1\u03b1;
-button.monitoring.noDisplayAnswers  =\u039d\u03b1\u03af
+button.monitoring.yes  =\u039d\u03b1\u03af
 output.desc.learner.all.correct.true  =\u038c\u03bb\u03b1 \u03a3\u03c9\u03c3\u03c4\u03ac
 output.desc.learner.all.correct.false  =\u038c\u03c7\u03b9 \u038c\u03bb\u03b1 \u03a3\u03c9\u03c3\u03c4\u03ac
 label.monitoring.downloadMarks.button  =\u039b\u03ae\u03c8\u03b7 \u0392\u03b1\u03b8\u03bc\u03ce\u03bd
@@ -223,6 +223,11 @@ label.show.students.choices  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u03c4\
 label.hide.students.choices  =\u0391\u03c0\u03cc\u03ba\u03c1\u03c5\u03c8\u03b7 \u03c4\u03c9\u03bd \u03b5\u03c0\u03b9\u03bb\u03bf\u03b3\u03ce\u03bd \u03c4\u03c9\u03bd \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03c9\u03bd
 label.print  =\u0395\u03ba\u03c4\u03cd\u03c0\u03c9\u03c3\u03b7
 label.excel.export  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03c3\u03b5 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf Excel
+label.displayFeedbackOnly  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03bc\u03cc\u03bd\u03bf \u03c4\u03c9\u03bd \u03c3\u03c7\u03bf\u03bb\u03af\u03c9\u03bd \u03b1\u03bd\u03b1\u03c4\u03c1\u03bf\u03c6\u03b4\u03cc\u03c4\u03b7\u03c3\u03b7\u03c2 \u03ba\u03b1\u03b9 \u03cc\u03c7\u03b9 \u03c4\u03c9\u03bd \u03b1\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd \u03ae \u03c4\u03b7\u03c2 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1\u03c2
+label.displayNoAnswersOrFeedback  =\u038c\u03c7\u03b9 \u03b5\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03b1\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd, \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1\u03c2 \u03ae \u03c3\u03c7\u03bf\u03bb\u03b9\u03c9\u03bd \u03b1\u03bd\u03b1\u03c4\u03c1\u03bf\u03c6\u03bf\u03b4\u03cc\u03c4\u03b7\u03c3\u03b7\u03c2
+label.monitoring.yesDisplayFeedbackOnly  =\u039f\u03b9 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03b9 \u03bc\u03c0\u03bf\u03c1\u03bf\u03cd\u03bd \u03bd\u03b1 \u03b4\u03bf\u03c5\u03bd \u03c4\u03b1 \u03c3\u03c7\u03cc\u03bb\u03b9\u03b1 \u03b1\u03bd\u03b1\u03c4\u03c1\u03bf\u03c6\u03bf\u03b4\u03cc\u03c4\u03b7\u03c3\u03b7\u03c2 \u03b1\u03bb\u03bb\u03ac \u03cc\u03c7\u03b9 \u03c4\u03b9\u03c2 \u03b1\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2 \u03ba\u03b1\u03b9 \u03c4\u03b7 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1 \u03b3\u03b9\u03b1 \u03c4\u03b9\u03c2 \u03b5\u03c1\u03c9\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2.
+label.monitoring.noDisplayFeedbackOnly1  =\u039f\u03b9 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03bf\u03cd\u03bd \u03bd\u03b1 \u03b4\u03bf\u03c5\u03bd \u03c4\u03b1 \u03c3\u03c7\u03cc\u03bb\u03b9\u03b1 \u03b1\u03bd\u03b1\u03c4\u03c1\u03bf\u03c6\u03bf\u03b4\u03cc\u03c4\u03b7\u03c3\u03b7\u03c2 \u03b3\u03b9\u03b1 \u03c4\u03b9\u03c2 \u03b5\u03c1\u03c9\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2
+label.monitoring.noDisplayFeedbackOnly2  =\u0398\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03b5\u03c0\u03b9\u03c4\u03c1\u03ad\u03c8\u03b5\u03c4\u03b5 \u03c3\u03c4\u03bf\u03c5\u03c2 \u03bc\u03b1\u03b8\u03b7\u03c4\u03ad\u03c2 \u03bd\u03b1 \u03b4\u03bf\u03c5\u03bd \u03c4\u03ce\u03c1\u03b1 \u03c4\u03b1 \u03c3\u03c7\u03cc\u03bb\u03b9\u03b1 \u03b1\u03bd\u03b1\u03c4\u03c1\u03bf\u03c6\u03bf\u03b4\u03cc\u03c4\u03b7\u03c3\u03b7\u03c2;
 
 
-#======= End labels: Exported 217 labels for el GR =====
+#======= End labels: Exported 222 labels for el GR =====
