--- a/lams_tool_notebook/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_notebook/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = notebook
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:25:56 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:52:33 CST 2018 
  
 #=================== labels for Notebook =================# 
 
@@ -122,6 +122,7 @@ label.editing.options  =Editerings alternativ
 label.activity.completion  =Aktivitetsslutt
 basic.forceResponse  =Er det krevet svar ?
 message.learner.blank.alertforceResponse  =Svar er krevet
+advanced.enable.anonymous.posts  =Koble til anonym mail
 
 
-#======= End labels: Exported 116 labels for no NO =====
+#======= End labels: Exported 117 labels for no NO =====
