--- a/lams_tool_wiki/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_wiki/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,22 +2,20 @@ appName = wiki
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:55:45 CST 2018 
  
 #=================== labels for Wiki =================# 
 
 appName  =wiki
-error.contentrepository  =Ha ocurrido un error al guardar/borrar el archivo {0}. Es posible que el archivo no se haya guardado correctamente.
 activity.helptext  =Herramienta para creaci\u00f3n colaborativa de documentos
 message.contentInUseSet  =Modificaciones al contenido no esta permitidas ya que por lo menos un estudiante ha accedido al material
-error.content.locked  =El contenido ha sido bloqueado ya que por lo menos uno estudiante lo ha accedido.
 tool.display.name  =Wiki
 tool.description  =Herramiente Wiki
 activity.title  =Wiki
 activity.description  =Herramienta Wiki
 pageTitle.authoring  =Autor\u00eda de Wiki
-button.basic  =B\u00e1sico
-button.advanced  =Avanzado
+button.basic  =Contenido
+button.advanced  =Configuraci\u00f3n
 button.continue  =Continuar
 button.edit  =Editar
 label.authoring.basic.title  =T\u00edtulo:
@@ -37,10 +35,6 @@ advanced.editingLimits.maximum  =M\u00e1ximo:
 advanced.editingLimits.nominimum  =Sin m\u00ednimo
 advanced.editingLimits.nomaximum  =Sin m\u00e1ximo
 advanced.editingLimits.error  =El n\u00famero m\u00e1ximo de ediciones debe ser mayor o igual que el m\u00ednimo.
-instructions.type.online  =Online
-instructions.type.offline  =Offline
-label.filename  =Nombre de archivo
-label.type  =Tipo
 message.updateSuccess  =Guardar Cambios
 pageTitle.learning  =Wiki
 message.defineLaterSet  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
@@ -51,8 +45,6 @@ button.statistics  =Estad\u00edsticas
 titleHeading.summary  =Resumen
 titleHeading.statistics  =Estad\u00edsticas
 titleHeading.editActivity  =Editar Actividad
-titleHeading.exportPortfolio  =Exportar Portfolio
-heading.group  =Grupo {0}:
 heading.totalLearners  =N\u00famero de estudiantes:
 heading.totalLearnersInGroup  =N\u00famero total de estudiantes en el grupo:
 heading.totalFinishedLearnersInGroup  =N\u00famero de estudiantes que han finalizado actividad:
@@ -70,14 +62,6 @@ button.next  =Siguiente
 label.created  =Creado
 label.lastModified  =\u00daltima modificaci\u00f3n
 label.notebookEntry  =Reflexi\u00f3n
-error.missingParam  =No se ha podido continuar. {0} no se encuentra.
-error.exceedMaxFileSize  =El tama\u00f1o del archivo excede lo permitido
-error.exception.NbApplication  =Ha ocurrido un error en la herramienta Wiki. Por favor reporte el error a su administrador de sistema. Error: {0}
-error.defineLater  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
-errors.maxfilesize  =El archivo que ha subido excede el tama\u00f1o m\u00e1ximo de {0} bytes.
-error.mandatoryField  =El campo {0} debe rellenarse.
-error.mark.invalid.number  ={0}
-error.mark.invalid.decimal.number  =El campo {0} debe ser un valor decimal.
 authoring.msg.cancel.save  =\u00bfEst seguro que quiere cerrar esta ventana sin guardar los cambios?
 button.try.again  =Intente nuevamente
 message.learner.blank.input  =No ha realizado ning\u00fan cambio. \u00bfEsta seguro que esto es correcto?
@@ -98,7 +82,7 @@ label.wiki.add  =A\u00f1adir
 label.wiki.add.toolTip  =A\u00f1adir una nueva p\u00e1gina al Wiki
 label.wiki.add.title.exists  =Ya existe una p\u00e1gina con nombre {0}, Eliga un nuevo nombre
 label.wiki.add.title.required  =El t\u00edtulo de la p\u00e1gina no puede ser dejado en blanco.
-label.wiki.last.edit  =\u00daltima vez editado por {0}, el {1}
+label.wiki.last.edit  =\u00daltima vez editado por <b>{0}</b>, el {1}
 label.wiki.refresh  =Refrescar
 label.wiki.refresh.toolTip  =Refrescar la p\u00e1gina y obtener nuevo contenido
 label.wiki.view  =Ver
@@ -134,8 +118,8 @@ monitor.summary.td.addNotebook  =A\u00f1adir anotaci\u00f3n al finalizar
 monitor.summary.td.notebookInstructions  =Instrucciones para anotaci\u00f3n
 monitor.nosessions  =Todavia no hay seciones para este Wiki.
 monitor.notebooks  =Anotaciones
-output.learner.number.of.edits  =N\u00famero de ediciones
-output.learner.number.of.add  =N\u00famero de p\u00e1ginas a\u00f1adidas
+output.desc.number.of.edits  =N\u00famero de ediciones
+output.desc.number.of.add  =N\u00famero de p\u00e1ginas a\u00f1adidas
 notify.pageEdited.subject  =P\u00e1gina editada por {0}.
 notify.pageAdded.subject  =P\u00e1gina agregada por {0}.
 notify.pageRemoved.subject  =P\u00e1gina removida por {0}.
@@ -154,6 +138,18 @@ label.wiki.remove.mark.confirm  =\u00bfEst\u00e1 seguro que desea marcar esta p\
 label.wiki.removed  =Esta p\u00e1gina ha sido eliminada.
 button.submit  =Finalizar
 error.title.invalid.characters  =T\u00edtulo no puede contener ninguno de estos caracteres: ^, <, >, #, (, ), \, |, ', ", {, }, `
+label.wiki.options  =Opciones
+label.activity.completion  =Al finalizar actividad
+label.notifications  =Notificaciones
+monitor.summary.date.restriction  =Restricci\u00f3n por fecha
+monitor.summary.when.date.restriction.is.set  =Estudiantes no podr\u00e1n usar el Wiki despu\u00e9s de la fecha
+monitor.summary.after.date  =Fecha y hora:
+monitor.summary.set.restriction  =Establecer restricci\u00f3n
+monitor.summary.unset.restriction  =Eliminar restricci\u00f3n
+authoring.info.teacher.set.restriction  =Para esta actividad, el instructor fij\u00f3 una fecha l\u00edmite hasta {0}. Despu\u00e9s de esta fecha, esta actividad no estar\u00e1 disponible.
+monitor.summary.notification  =Notificaci\u00f3n
+monitor.summary.date.restriction.set  =Fecha
+monitor.summary.date.restriction.removed  =La fecha l\u00edmite ha sido eliminada
 
 
-#======= End labels: Exported 148 labels for es ES =====
+#======= End labels: Exported 144 labels for es ES =====
